// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BeltSystem > getBeltProps returns valid data (stripePosition undefined) 1`] = `
{
  "belt": {
    "borderColor": "#434244",
    "color1": "#FFFFFF",
    "color2": "",
    "color3": "",
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": 1,
    "maxStripes": 4,
    "minStripes": 0,
    "name": "White",
    "patchBorderColor": "#434244",
    "patchColor": "#000000",
    "professorBorderColor": "",
    "professorPatchColor": "",
    "sortOrder": 10,
    "stripeColor": "#FFFFFF",
    "stripeStart": "Right",
    "system": "IBJJF",
    "type": "Solid",
  },
  "beltRDF": {
    "about": "https://github.com/jeffholst/vue-custom-belt",
    "title": "White",
  },
  "border": "#434244",
  "callback": null,
  "hasPatch": true,
  "hasProfessorPatch": false,
  "id": "",
  "patch": "#000000",
  "patchBorder": "#434244",
  "professorBorder": "",
  "professorPatch": "",
  "randomSettings": {
    "hasPatch": undefined,
    "hasProfessorPatch": undefined,
    "includeBelts": undefined,
    "stripeCount": undefined,
    "stripePosition": undefined,
  },
  "refreshInterval": 0,
  "s10l1": "#FFFFFF",
  "s10l2a": "#FFFFFF",
  "s10l2b": "#FFFFFF",
  "s10l3": "#FFFFFF",
  "s11l1": "#FFFFFF",
  "s11l2a": "#FFFFFF",
  "s11l2b": "#FFFFFF",
  "s11l3": "#FFFFFF",
  "s12l1": "#FFFFFF",
  "s12l2a": "#FFFFFF",
  "s12l2b": "#FFFFFF",
  "s12l3": "#FFFFFF",
  "s13l1": "#FFFFFF",
  "s13l2a": "#FFFFFF",
  "s13l2b": "#FFFFFF",
  "s13l3": "#FFFFFF",
  "s1l1": "#FFFFFF",
  "s1l2a": "#FFFFFF",
  "s1l2b": "#FFFFFF",
  "s1l3": "#FFFFFF",
  "s2l1": "#FFFFFF",
  "s2l2a": "#FFFFFF",
  "s2l2b": "#FFFFFF",
  "s2l3": "#FFFFFF",
  "s3l1": "#FFFFFF",
  "s3l2a": "#FFFFFF",
  "s3l2b": "#FFFFFF",
  "s3l3": "#FFFFFF",
  "s4l1": "#FFFFFF",
  "s4l2a": "#FFFFFF",
  "s4l2b": "#FFFFFF",
  "s4l3": "#FFFFFF",
  "s5l1": "#FFFFFF",
  "s5l2a": "#FFFFFF",
  "s5l2b": "#FFFFFF",
  "s5l3": "#FFFFFF",
  "s6l1": "#FFFFFF",
  "s6l2a": "#FFFFFF",
  "s6l2b": "#FFFFFF",
  "s6l3": "#FFFFFF",
  "s7l1": "#FFFFFF",
  "s7l2a": "#FFFFFF",
  "s7l2b": "#FFFFFF",
  "s7l3": "#FFFFFF",
  "s8l1": "#FFFFFF",
  "s8l2a": "#FFFFFF",
  "s8l2b": "#FFFFFF",
  "s8l3": "#FFFFFF",
  "s9l1": "#FFFFFF",
  "s9l2a": "#FFFFFF",
  "s9l2b": "#FFFFFF",
  "s9l3": "#FFFFFF",
  "stripe1": "#FFFFFF",
  "stripe10": "#FFFFFF",
  "stripe2": "#FFFFFF",
  "stripe3": "#FFFFFF",
  "stripe4": "#FFFFFF",
  "stripe5": "#FFFFFF",
  "stripe6": "#FFFFFF",
  "stripe7": "#FFFFFF",
  "stripe8": "#FFFFFF",
  "stripe9": "#FFFFFF",
  "stripeCount": 2,
  "stripePosition": "Right",
  "transitionCSS": "",
  "version": "",
}
`;

exports[`BeltSystem > getBeltProps returns valid data 1`] = `
{
  "belt": {
    "borderColor": "#434244",
    "color1": "#FFFFFF",
    "color2": "",
    "color3": "",
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": 1,
    "maxStripes": 4,
    "minStripes": 0,
    "name": "White",
    "patchBorderColor": "#434244",
    "patchColor": "#000000",
    "professorBorderColor": "",
    "professorPatchColor": "",
    "sortOrder": 10,
    "stripeColor": "#FFFFFF",
    "stripeStart": "Right",
    "system": "IBJJF",
    "type": "Solid",
  },
  "beltRDF": {
    "about": "https://github.com/jeffholst/vue-custom-belt",
    "title": "White",
  },
  "border": "#434244",
  "callback": null,
  "hasPatch": true,
  "hasProfessorPatch": false,
  "id": "",
  "patch": "#000000",
  "patchBorder": "#434244",
  "professorBorder": "",
  "professorPatch": "",
  "randomSettings": {
    "hasPatch": undefined,
    "hasProfessorPatch": undefined,
    "includeBelts": undefined,
    "stripeCount": undefined,
    "stripePosition": undefined,
  },
  "refreshInterval": 0,
  "s10l1": "#FFFFFF",
  "s10l2a": "#FFFFFF",
  "s10l2b": "#FFFFFF",
  "s10l3": "#FFFFFF",
  "s11l1": "#FFFFFF",
  "s11l2a": "#FFFFFF",
  "s11l2b": "#FFFFFF",
  "s11l3": "#FFFFFF",
  "s12l1": "#FFFFFF",
  "s12l2a": "#FFFFFF",
  "s12l2b": "#FFFFFF",
  "s12l3": "#FFFFFF",
  "s13l1": "#FFFFFF",
  "s13l2a": "#FFFFFF",
  "s13l2b": "#FFFFFF",
  "s13l3": "#FFFFFF",
  "s1l1": "#FFFFFF",
  "s1l2a": "#FFFFFF",
  "s1l2b": "#FFFFFF",
  "s1l3": "#FFFFFF",
  "s2l1": "#FFFFFF",
  "s2l2a": "#FFFFFF",
  "s2l2b": "#FFFFFF",
  "s2l3": "#FFFFFF",
  "s3l1": "#FFFFFF",
  "s3l2a": "#FFFFFF",
  "s3l2b": "#FFFFFF",
  "s3l3": "#FFFFFF",
  "s4l1": "#FFFFFF",
  "s4l2a": "#FFFFFF",
  "s4l2b": "#FFFFFF",
  "s4l3": "#FFFFFF",
  "s5l1": "#FFFFFF",
  "s5l2a": "#FFFFFF",
  "s5l2b": "#FFFFFF",
  "s5l3": "#FFFFFF",
  "s6l1": "#FFFFFF",
  "s6l2a": "#FFFFFF",
  "s6l2b": "#FFFFFF",
  "s6l3": "#FFFFFF",
  "s7l1": "#FFFFFF",
  "s7l2a": "#FFFFFF",
  "s7l2b": "#FFFFFF",
  "s7l3": "#FFFFFF",
  "s8l1": "#FFFFFF",
  "s8l2a": "#FFFFFF",
  "s8l2b": "#FFFFFF",
  "s8l3": "#FFFFFF",
  "s9l1": "#FFFFFF",
  "s9l2a": "#FFFFFF",
  "s9l2b": "#FFFFFF",
  "s9l3": "#FFFFFF",
  "stripe1": "#FFFFFF",
  "stripe10": "#FFFFFF",
  "stripe2": "#FFFFFF",
  "stripe3": "#FFFFFF",
  "stripe4": "#FFFFFF",
  "stripe5": "#FFFFFF",
  "stripe6": "#FFFFFF",
  "stripe7": "#FFFFFF",
  "stripe8": "#FFFFFF",
  "stripe9": "#FFFFFF",
  "stripeCount": 1,
  "stripePosition": "Left",
  "transitionCSS": "",
  "version": "",
}
`;

exports[`BeltSystem > getBeltPropsAll returns valid data 1`] = `
[
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#FFFFFF",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 1,
      "maxStripes": 4,
      "minStripes": 0,
      "name": "White",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 10,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Solid",
    },
    "beltRDF": {
      "about": "https://github.com/jeffholst/vue-custom-belt",
      "title": "White",
    },
    "border": "#434244",
    "callback": null,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patch": "#000000",
    "patchBorder": "#434244",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 2000,
    "s10l1": "#FFFFFF",
    "s10l2a": "#FFFFFF",
    "s10l2b": "#FFFFFF",
    "s10l3": "#FFFFFF",
    "s11l1": "#FFFFFF",
    "s11l2a": "#FFFFFF",
    "s11l2b": "#FFFFFF",
    "s11l3": "#FFFFFF",
    "s12l1": "#FFFFFF",
    "s12l2a": "#FFFFFF",
    "s12l2b": "#FFFFFF",
    "s12l3": "#FFFFFF",
    "s13l1": "#FFFFFF",
    "s13l2a": "#FFFFFF",
    "s13l2b": "#FFFFFF",
    "s13l3": "#FFFFFF",
    "s1l1": "#FFFFFF",
    "s1l2a": "#FFFFFF",
    "s1l2b": "#FFFFFF",
    "s1l3": "#FFFFFF",
    "s2l1": "#FFFFFF",
    "s2l2a": "#FFFFFF",
    "s2l2b": "#FFFFFF",
    "s2l3": "#FFFFFF",
    "s3l1": "#FFFFFF",
    "s3l2a": "#FFFFFF",
    "s3l2b": "#FFFFFF",
    "s3l3": "#FFFFFF",
    "s4l1": "#FFFFFF",
    "s4l2a": "#FFFFFF",
    "s4l2b": "#FFFFFF",
    "s4l3": "#FFFFFF",
    "s5l1": "#FFFFFF",
    "s5l2a": "#FFFFFF",
    "s5l2b": "#FFFFFF",
    "s5l3": "#FFFFFF",
    "s6l1": "#FFFFFF",
    "s6l2a": "#FFFFFF",
    "s6l2b": "#FFFFFF",
    "s6l3": "#FFFFFF",
    "s7l1": "#FFFFFF",
    "s7l2a": "#FFFFFF",
    "s7l2b": "#FFFFFF",
    "s7l3": "#FFFFFF",
    "s8l1": "#FFFFFF",
    "s8l2a": "#FFFFFF",
    "s8l2b": "#FFFFFF",
    "s8l3": "#FFFFFF",
    "s9l1": "#FFFFFF",
    "s9l2a": "#FFFFFF",
    "s9l2b": "#FFFFFF",
    "s9l3": "#FFFFFF",
    "stripe1": "#FFFFFF",
    "stripe10": "#FFFFFF",
    "stripe2": "#FFFFFF",
    "stripe3": "#FFFFFF",
    "stripe4": "#FFFFFF",
    "stripe5": "#FFFFFF",
    "stripe6": "#FFFFFF",
    "stripe7": "#FFFFFF",
    "stripe8": "#FFFFFF",
    "stripe9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "test",
    "version": "",
  },
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#999999",
      "color2": "#FFFFFF",
      "color3": "#999999",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 2,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Gray/White",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 20,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Striped",
    },
    "beltRDF": {
      "about": "https://github.com/jeffholst/vue-custom-belt",
      "title": "Gray/White",
    },
    "border": "#434244",
    "callback": null,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patch": "#000000",
    "patchBorder": "#434244",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 2000,
    "s10l1": "#999999",
    "s10l2a": "#FFFFFF",
    "s10l2b": "#FFFFFF",
    "s10l3": "#999999",
    "s11l1": "#999999",
    "s11l2a": "#FFFFFF",
    "s11l2b": "#FFFFFF",
    "s11l3": "#999999",
    "s12l1": "#999999",
    "s12l2a": "#FFFFFF",
    "s12l2b": "#FFFFFF",
    "s12l3": "#999999",
    "s13l1": "#999999",
    "s13l2a": "#FFFFFF",
    "s13l2b": "#FFFFFF",
    "s13l3": "#999999",
    "s1l1": "#999999",
    "s1l2a": "#FFFFFF",
    "s1l2b": "#FFFFFF",
    "s1l3": "#999999",
    "s2l1": "#999999",
    "s2l2a": "#FFFFFF",
    "s2l2b": "#FFFFFF",
    "s2l3": "#999999",
    "s3l1": "#999999",
    "s3l2a": "#FFFFFF",
    "s3l2b": "#FFFFFF",
    "s3l3": "#999999",
    "s4l1": "#999999",
    "s4l2a": "#FFFFFF",
    "s4l2b": "#FFFFFF",
    "s4l3": "#999999",
    "s5l1": "#999999",
    "s5l2a": "#FFFFFF",
    "s5l2b": "#FFFFFF",
    "s5l3": "#999999",
    "s6l1": "#999999",
    "s6l2a": "#FFFFFF",
    "s6l2b": "#FFFFFF",
    "s6l3": "#999999",
    "s7l1": "#999999",
    "s7l2a": "#FFFFFF",
    "s7l2b": "#FFFFFF",
    "s7l3": "#999999",
    "s8l1": "#999999",
    "s8l2a": "#FFFFFF",
    "s8l2b": "#FFFFFF",
    "s8l3": "#999999",
    "s9l1": "#999999",
    "s9l2a": "#FFFFFF",
    "s9l2b": "#FFFFFF",
    "s9l3": "#999999",
    "stripe1": "#FFFFFF",
    "stripe10": "#FFFFFF",
    "stripe2": "#FFFFFF",
    "stripe3": "#FFFFFF",
    "stripe4": "#FFFFFF",
    "stripe5": "#FFFFFF",
    "stripe6": "#FFFFFF",
    "stripe7": "#FFFFFF",
    "stripe8": "#FFFFFF",
    "stripe9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "test",
    "version": "",
  },
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#999999",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 3,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Gray",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 30,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Solid",
    },
    "beltRDF": {
      "about": "https://github.com/jeffholst/vue-custom-belt",
      "title": "Gray",
    },
    "border": "#434244",
    "callback": null,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patch": "#000000",
    "patchBorder": "#434244",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 2000,
    "s10l1": "#999999",
    "s10l2a": "#999999",
    "s10l2b": "#999999",
    "s10l3": "#999999",
    "s11l1": "#999999",
    "s11l2a": "#999999",
    "s11l2b": "#999999",
    "s11l3": "#999999",
    "s12l1": "#999999",
    "s12l2a": "#999999",
    "s12l2b": "#999999",
    "s12l3": "#999999",
    "s13l1": "#999999",
    "s13l2a": "#999999",
    "s13l2b": "#999999",
    "s13l3": "#999999",
    "s1l1": "#999999",
    "s1l2a": "#999999",
    "s1l2b": "#999999",
    "s1l3": "#999999",
    "s2l1": "#999999",
    "s2l2a": "#999999",
    "s2l2b": "#999999",
    "s2l3": "#999999",
    "s3l1": "#999999",
    "s3l2a": "#999999",
    "s3l2b": "#999999",
    "s3l3": "#999999",
    "s4l1": "#999999",
    "s4l2a": "#999999",
    "s4l2b": "#999999",
    "s4l3": "#999999",
    "s5l1": "#999999",
    "s5l2a": "#999999",
    "s5l2b": "#999999",
    "s5l3": "#999999",
    "s6l1": "#999999",
    "s6l2a": "#999999",
    "s6l2b": "#999999",
    "s6l3": "#999999",
    "s7l1": "#999999",
    "s7l2a": "#999999",
    "s7l2b": "#999999",
    "s7l3": "#999999",
    "s8l1": "#999999",
    "s8l2a": "#999999",
    "s8l2b": "#999999",
    "s8l3": "#999999",
    "s9l1": "#999999",
    "s9l2a": "#999999",
    "s9l2b": "#999999",
    "s9l3": "#999999",
    "stripe1": "#FFFFFF",
    "stripe10": "#FFFFFF",
    "stripe2": "#FFFFFF",
    "stripe3": "#FFFFFF",
    "stripe4": "#FFFFFF",
    "stripe5": "#FFFFFF",
    "stripe6": "#FFFFFF",
    "stripe7": "#FFFFFF",
    "stripe8": "#FFFFFF",
    "stripe9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "test",
    "version": "",
  },
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#999999",
      "color2": "#000000",
      "color3": "#999999",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 4,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Gray/Black",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 40,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Striped",
    },
    "beltRDF": {
      "about": "https://github.com/jeffholst/vue-custom-belt",
      "title": "Gray/Black",
    },
    "border": "#434244",
    "callback": null,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patch": "#000000",
    "patchBorder": "#434244",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 2000,
    "s10l1": "#999999",
    "s10l2a": "#000000",
    "s10l2b": "#000000",
    "s10l3": "#999999",
    "s11l1": "#999999",
    "s11l2a": "#000000",
    "s11l2b": "#000000",
    "s11l3": "#999999",
    "s12l1": "#999999",
    "s12l2a": "#000000",
    "s12l2b": "#000000",
    "s12l3": "#999999",
    "s13l1": "#999999",
    "s13l2a": "#000000",
    "s13l2b": "#000000",
    "s13l3": "#999999",
    "s1l1": "#999999",
    "s1l2a": "#000000",
    "s1l2b": "#000000",
    "s1l3": "#999999",
    "s2l1": "#999999",
    "s2l2a": "#000000",
    "s2l2b": "#000000",
    "s2l3": "#999999",
    "s3l1": "#999999",
    "s3l2a": "#000000",
    "s3l2b": "#000000",
    "s3l3": "#999999",
    "s4l1": "#999999",
    "s4l2a": "#000000",
    "s4l2b": "#000000",
    "s4l3": "#999999",
    "s5l1": "#999999",
    "s5l2a": "#000000",
    "s5l2b": "#000000",
    "s5l3": "#999999",
    "s6l1": "#999999",
    "s6l2a": "#000000",
    "s6l2b": "#000000",
    "s6l3": "#999999",
    "s7l1": "#999999",
    "s7l2a": "#000000",
    "s7l2b": "#000000",
    "s7l3": "#999999",
    "s8l1": "#999999",
    "s8l2a": "#000000",
    "s8l2b": "#000000",
    "s8l3": "#999999",
    "s9l1": "#999999",
    "s9l2a": "#000000",
    "s9l2b": "#000000",
    "s9l3": "#999999",
    "stripe1": "#FFFFFF",
    "stripe10": "#FFFFFF",
    "stripe2": "#FFFFFF",
    "stripe3": "#FFFFFF",
    "stripe4": "#FFFFFF",
    "stripe5": "#FFFFFF",
    "stripe6": "#FFFFFF",
    "stripe7": "#FFFFFF",
    "stripe8": "#FFFFFF",
    "stripe9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "test",
    "version": "",
  },
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#FFCC00",
      "color2": "#FFFFFF",
      "color3": "#FFCC00",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 5,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Yellow/White",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 50,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Striped",
    },
    "beltRDF": {
      "about": "https://github.com/jeffholst/vue-custom-belt",
      "title": "Yellow/White",
    },
    "border": "#434244",
    "callback": null,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patch": "#000000",
    "patchBorder": "#434244",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 2000,
    "s10l1": "#FFCC00",
    "s10l2a": "#FFFFFF",
    "s10l2b": "#FFFFFF",
    "s10l3": "#FFCC00",
    "s11l1": "#FFCC00",
    "s11l2a": "#FFFFFF",
    "s11l2b": "#FFFFFF",
    "s11l3": "#FFCC00",
    "s12l1": "#FFCC00",
    "s12l2a": "#FFFFFF",
    "s12l2b": "#FFFFFF",
    "s12l3": "#FFCC00",
    "s13l1": "#FFCC00",
    "s13l2a": "#FFFFFF",
    "s13l2b": "#FFFFFF",
    "s13l3": "#FFCC00",
    "s1l1": "#FFCC00",
    "s1l2a": "#FFFFFF",
    "s1l2b": "#FFFFFF",
    "s1l3": "#FFCC00",
    "s2l1": "#FFCC00",
    "s2l2a": "#FFFFFF",
    "s2l2b": "#FFFFFF",
    "s2l3": "#FFCC00",
    "s3l1": "#FFCC00",
    "s3l2a": "#FFFFFF",
    "s3l2b": "#FFFFFF",
    "s3l3": "#FFCC00",
    "s4l1": "#FFCC00",
    "s4l2a": "#FFFFFF",
    "s4l2b": "#FFFFFF",
    "s4l3": "#FFCC00",
    "s5l1": "#FFCC00",
    "s5l2a": "#FFFFFF",
    "s5l2b": "#FFFFFF",
    "s5l3": "#FFCC00",
    "s6l1": "#FFCC00",
    "s6l2a": "#FFFFFF",
    "s6l2b": "#FFFFFF",
    "s6l3": "#FFCC00",
    "s7l1": "#FFCC00",
    "s7l2a": "#FFFFFF",
    "s7l2b": "#FFFFFF",
    "s7l3": "#FFCC00",
    "s8l1": "#FFCC00",
    "s8l2a": "#FFFFFF",
    "s8l2b": "#FFFFFF",
    "s8l3": "#FFCC00",
    "s9l1": "#FFCC00",
    "s9l2a": "#FFFFFF",
    "s9l2b": "#FFFFFF",
    "s9l3": "#FFCC00",
    "stripe1": "#FFFFFF",
    "stripe10": "#FFFFFF",
    "stripe2": "#FFFFFF",
    "stripe3": "#FFFFFF",
    "stripe4": "#FFFFFF",
    "stripe5": "#FFFFFF",
    "stripe6": "#FFFFFF",
    "stripe7": "#FFFFFF",
    "stripe8": "#FFFFFF",
    "stripe9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "test",
    "version": "",
  },
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#FFCC00",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 6,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Yellow",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 60,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Solid",
    },
    "beltRDF": {
      "about": "https://github.com/jeffholst/vue-custom-belt",
      "title": "Yellow",
    },
    "border": "#434244",
    "callback": null,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patch": "#000000",
    "patchBorder": "#434244",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 2000,
    "s10l1": "#FFCC00",
    "s10l2a": "#FFCC00",
    "s10l2b": "#FFCC00",
    "s10l3": "#FFCC00",
    "s11l1": "#FFCC00",
    "s11l2a": "#FFCC00",
    "s11l2b": "#FFCC00",
    "s11l3": "#FFCC00",
    "s12l1": "#FFCC00",
    "s12l2a": "#FFCC00",
    "s12l2b": "#FFCC00",
    "s12l3": "#FFCC00",
    "s13l1": "#FFCC00",
    "s13l2a": "#FFCC00",
    "s13l2b": "#FFCC00",
    "s13l3": "#FFCC00",
    "s1l1": "#FFCC00",
    "s1l2a": "#FFCC00",
    "s1l2b": "#FFCC00",
    "s1l3": "#FFCC00",
    "s2l1": "#FFCC00",
    "s2l2a": "#FFCC00",
    "s2l2b": "#FFCC00",
    "s2l3": "#FFCC00",
    "s3l1": "#FFCC00",
    "s3l2a": "#FFCC00",
    "s3l2b": "#FFCC00",
    "s3l3": "#FFCC00",
    "s4l1": "#FFCC00",
    "s4l2a": "#FFCC00",
    "s4l2b": "#FFCC00",
    "s4l3": "#FFCC00",
    "s5l1": "#FFCC00",
    "s5l2a": "#FFCC00",
    "s5l2b": "#FFCC00",
    "s5l3": "#FFCC00",
    "s6l1": "#FFCC00",
    "s6l2a": "#FFCC00",
    "s6l2b": "#FFCC00",
    "s6l3": "#FFCC00",
    "s7l1": "#FFCC00",
    "s7l2a": "#FFCC00",
    "s7l2b": "#FFCC00",
    "s7l3": "#FFCC00",
    "s8l1": "#FFCC00",
    "s8l2a": "#FFCC00",
    "s8l2b": "#FFCC00",
    "s8l3": "#FFCC00",
    "s9l1": "#FFCC00",
    "s9l2a": "#FFCC00",
    "s9l2b": "#FFCC00",
    "s9l3": "#FFCC00",
    "stripe1": "#FFFFFF",
    "stripe10": "#FFFFFF",
    "stripe2": "#FFFFFF",
    "stripe3": "#FFFFFF",
    "stripe4": "#FFFFFF",
    "stripe5": "#FFFFFF",
    "stripe6": "#FFFFFF",
    "stripe7": "#FFFFFF",
    "stripe8": "#FFFFFF",
    "stripe9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "test",
    "version": "",
  },
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#FFCC00",
      "color2": "#000000",
      "color3": "#FFCC00",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 7,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Yellow/Black",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 70,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Striped",
    },
    "beltRDF": {
      "about": "https://github.com/jeffholst/vue-custom-belt",
      "title": "Yellow/Black",
    },
    "border": "#434244",
    "callback": null,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patch": "#000000",
    "patchBorder": "#434244",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 2000,
    "s10l1": "#FFCC00",
    "s10l2a": "#000000",
    "s10l2b": "#000000",
    "s10l3": "#FFCC00",
    "s11l1": "#FFCC00",
    "s11l2a": "#000000",
    "s11l2b": "#000000",
    "s11l3": "#FFCC00",
    "s12l1": "#FFCC00",
    "s12l2a": "#000000",
    "s12l2b": "#000000",
    "s12l3": "#FFCC00",
    "s13l1": "#FFCC00",
    "s13l2a": "#000000",
    "s13l2b": "#000000",
    "s13l3": "#FFCC00",
    "s1l1": "#FFCC00",
    "s1l2a": "#000000",
    "s1l2b": "#000000",
    "s1l3": "#FFCC00",
    "s2l1": "#FFCC00",
    "s2l2a": "#000000",
    "s2l2b": "#000000",
    "s2l3": "#FFCC00",
    "s3l1": "#FFCC00",
    "s3l2a": "#000000",
    "s3l2b": "#000000",
    "s3l3": "#FFCC00",
    "s4l1": "#FFCC00",
    "s4l2a": "#000000",
    "s4l2b": "#000000",
    "s4l3": "#FFCC00",
    "s5l1": "#FFCC00",
    "s5l2a": "#000000",
    "s5l2b": "#000000",
    "s5l3": "#FFCC00",
    "s6l1": "#FFCC00",
    "s6l2a": "#000000",
    "s6l2b": "#000000",
    "s6l3": "#FFCC00",
    "s7l1": "#FFCC00",
    "s7l2a": "#000000",
    "s7l2b": "#000000",
    "s7l3": "#FFCC00",
    "s8l1": "#FFCC00",
    "s8l2a": "#000000",
    "s8l2b": "#000000",
    "s8l3": "#FFCC00",
    "s9l1": "#FFCC00",
    "s9l2a": "#000000",
    "s9l2b": "#000000",
    "s9l3": "#FFCC00",
    "stripe1": "#FFFFFF",
    "stripe10": "#FFFFFF",
    "stripe2": "#FFFFFF",
    "stripe3": "#FFFFFF",
    "stripe4": "#FFFFFF",
    "stripe5": "#FFFFFF",
    "stripe6": "#FFFFFF",
    "stripe7": "#FFFFFF",
    "stripe8": "#FFFFFF",
    "stripe9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "test",
    "version": "",
  },
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#CC6633",
      "color2": "#FFFFFF",
      "color3": "#CC6633",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 8,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Orange/White",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 80,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Striped",
    },
    "beltRDF": {
      "about": "https://github.com/jeffholst/vue-custom-belt",
      "title": "Orange/White",
    },
    "border": "#434244",
    "callback": null,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patch": "#000000",
    "patchBorder": "#434244",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 2000,
    "s10l1": "#CC6633",
    "s10l2a": "#FFFFFF",
    "s10l2b": "#FFFFFF",
    "s10l3": "#CC6633",
    "s11l1": "#CC6633",
    "s11l2a": "#FFFFFF",
    "s11l2b": "#FFFFFF",
    "s11l3": "#CC6633",
    "s12l1": "#CC6633",
    "s12l2a": "#FFFFFF",
    "s12l2b": "#FFFFFF",
    "s12l3": "#CC6633",
    "s13l1": "#CC6633",
    "s13l2a": "#FFFFFF",
    "s13l2b": "#FFFFFF",
    "s13l3": "#CC6633",
    "s1l1": "#CC6633",
    "s1l2a": "#FFFFFF",
    "s1l2b": "#FFFFFF",
    "s1l3": "#CC6633",
    "s2l1": "#CC6633",
    "s2l2a": "#FFFFFF",
    "s2l2b": "#FFFFFF",
    "s2l3": "#CC6633",
    "s3l1": "#CC6633",
    "s3l2a": "#FFFFFF",
    "s3l2b": "#FFFFFF",
    "s3l3": "#CC6633",
    "s4l1": "#CC6633",
    "s4l2a": "#FFFFFF",
    "s4l2b": "#FFFFFF",
    "s4l3": "#CC6633",
    "s5l1": "#CC6633",
    "s5l2a": "#FFFFFF",
    "s5l2b": "#FFFFFF",
    "s5l3": "#CC6633",
    "s6l1": "#CC6633",
    "s6l2a": "#FFFFFF",
    "s6l2b": "#FFFFFF",
    "s6l3": "#CC6633",
    "s7l1": "#CC6633",
    "s7l2a": "#FFFFFF",
    "s7l2b": "#FFFFFF",
    "s7l3": "#CC6633",
    "s8l1": "#CC6633",
    "s8l2a": "#FFFFFF",
    "s8l2b": "#FFFFFF",
    "s8l3": "#CC6633",
    "s9l1": "#CC6633",
    "s9l2a": "#FFFFFF",
    "s9l2b": "#FFFFFF",
    "s9l3": "#CC6633",
    "stripe1": "#FFFFFF",
    "stripe10": "#FFFFFF",
    "stripe2": "#FFFFFF",
    "stripe3": "#FFFFFF",
    "stripe4": "#FFFFFF",
    "stripe5": "#FFFFFF",
    "stripe6": "#FFFFFF",
    "stripe7": "#FFFFFF",
    "stripe8": "#FFFFFF",
    "stripe9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "test",
    "version": "",
  },
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#CC6633",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 9,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Orange",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 90,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Solid",
    },
    "beltRDF": {
      "about": "https://github.com/jeffholst/vue-custom-belt",
      "title": "Orange",
    },
    "border": "#434244",
    "callback": null,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patch": "#000000",
    "patchBorder": "#434244",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 2000,
    "s10l1": "#CC6633",
    "s10l2a": "#CC6633",
    "s10l2b": "#CC6633",
    "s10l3": "#CC6633",
    "s11l1": "#CC6633",
    "s11l2a": "#CC6633",
    "s11l2b": "#CC6633",
    "s11l3": "#CC6633",
    "s12l1": "#CC6633",
    "s12l2a": "#CC6633",
    "s12l2b": "#CC6633",
    "s12l3": "#CC6633",
    "s13l1": "#CC6633",
    "s13l2a": "#CC6633",
    "s13l2b": "#CC6633",
    "s13l3": "#CC6633",
    "s1l1": "#CC6633",
    "s1l2a": "#CC6633",
    "s1l2b": "#CC6633",
    "s1l3": "#CC6633",
    "s2l1": "#CC6633",
    "s2l2a": "#CC6633",
    "s2l2b": "#CC6633",
    "s2l3": "#CC6633",
    "s3l1": "#CC6633",
    "s3l2a": "#CC6633",
    "s3l2b": "#CC6633",
    "s3l3": "#CC6633",
    "s4l1": "#CC6633",
    "s4l2a": "#CC6633",
    "s4l2b": "#CC6633",
    "s4l3": "#CC6633",
    "s5l1": "#CC6633",
    "s5l2a": "#CC6633",
    "s5l2b": "#CC6633",
    "s5l3": "#CC6633",
    "s6l1": "#CC6633",
    "s6l2a": "#CC6633",
    "s6l2b": "#CC6633",
    "s6l3": "#CC6633",
    "s7l1": "#CC6633",
    "s7l2a": "#CC6633",
    "s7l2b": "#CC6633",
    "s7l3": "#CC6633",
    "s8l1": "#CC6633",
    "s8l2a": "#CC6633",
    "s8l2b": "#CC6633",
    "s8l3": "#CC6633",
    "s9l1": "#CC6633",
    "s9l2a": "#CC6633",
    "s9l2b": "#CC6633",
    "s9l3": "#CC6633",
    "stripe1": "#FFFFFF",
    "stripe10": "#FFFFFF",
    "stripe2": "#FFFFFF",
    "stripe3": "#FFFFFF",
    "stripe4": "#FFFFFF",
    "stripe5": "#FFFFFF",
    "stripe6": "#FFFFFF",
    "stripe7": "#FFFFFF",
    "stripe8": "#FFFFFF",
    "stripe9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "test",
    "version": "",
  },
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#CC6633",
      "color2": "#000000",
      "color3": "#CC6633",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 10,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Orange/Black",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 100,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Striped",
    },
    "beltRDF": {
      "about": "https://github.com/jeffholst/vue-custom-belt",
      "title": "Orange/Black",
    },
    "border": "#434244",
    "callback": null,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patch": "#000000",
    "patchBorder": "#434244",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 2000,
    "s10l1": "#CC6633",
    "s10l2a": "#000000",
    "s10l2b": "#000000",
    "s10l3": "#CC6633",
    "s11l1": "#CC6633",
    "s11l2a": "#000000",
    "s11l2b": "#000000",
    "s11l3": "#CC6633",
    "s12l1": "#CC6633",
    "s12l2a": "#000000",
    "s12l2b": "#000000",
    "s12l3": "#CC6633",
    "s13l1": "#CC6633",
    "s13l2a": "#000000",
    "s13l2b": "#000000",
    "s13l3": "#CC6633",
    "s1l1": "#CC6633",
    "s1l2a": "#000000",
    "s1l2b": "#000000",
    "s1l3": "#CC6633",
    "s2l1": "#CC6633",
    "s2l2a": "#000000",
    "s2l2b": "#000000",
    "s2l3": "#CC6633",
    "s3l1": "#CC6633",
    "s3l2a": "#000000",
    "s3l2b": "#000000",
    "s3l3": "#CC6633",
    "s4l1": "#CC6633",
    "s4l2a": "#000000",
    "s4l2b": "#000000",
    "s4l3": "#CC6633",
    "s5l1": "#CC6633",
    "s5l2a": "#000000",
    "s5l2b": "#000000",
    "s5l3": "#CC6633",
    "s6l1": "#CC6633",
    "s6l2a": "#000000",
    "s6l2b": "#000000",
    "s6l3": "#CC6633",
    "s7l1": "#CC6633",
    "s7l2a": "#000000",
    "s7l2b": "#000000",
    "s7l3": "#CC6633",
    "s8l1": "#CC6633",
    "s8l2a": "#000000",
    "s8l2b": "#000000",
    "s8l3": "#CC6633",
    "s9l1": "#CC6633",
    "s9l2a": "#000000",
    "s9l2b": "#000000",
    "s9l3": "#CC6633",
    "stripe1": "#FFFFFF",
    "stripe10": "#FFFFFF",
    "stripe2": "#FFFFFF",
    "stripe3": "#FFFFFF",
    "stripe4": "#FFFFFF",
    "stripe5": "#FFFFFF",
    "stripe6": "#FFFFFF",
    "stripe7": "#FFFFFF",
    "stripe8": "#FFFFFF",
    "stripe9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "test",
    "version": "",
  },
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#006633",
      "color2": "#FFFFFF",
      "color3": "#006633",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 11,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Green/White",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 110,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Striped",
    },
    "beltRDF": {
      "about": "https://github.com/jeffholst/vue-custom-belt",
      "title": "Green/White",
    },
    "border": "#434244",
    "callback": null,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patch": "#000000",
    "patchBorder": "#434244",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 2000,
    "s10l1": "#006633",
    "s10l2a": "#FFFFFF",
    "s10l2b": "#FFFFFF",
    "s10l3": "#006633",
    "s11l1": "#006633",
    "s11l2a": "#FFFFFF",
    "s11l2b": "#FFFFFF",
    "s11l3": "#006633",
    "s12l1": "#006633",
    "s12l2a": "#FFFFFF",
    "s12l2b": "#FFFFFF",
    "s12l3": "#006633",
    "s13l1": "#006633",
    "s13l2a": "#FFFFFF",
    "s13l2b": "#FFFFFF",
    "s13l3": "#006633",
    "s1l1": "#006633",
    "s1l2a": "#FFFFFF",
    "s1l2b": "#FFFFFF",
    "s1l3": "#006633",
    "s2l1": "#006633",
    "s2l2a": "#FFFFFF",
    "s2l2b": "#FFFFFF",
    "s2l3": "#006633",
    "s3l1": "#006633",
    "s3l2a": "#FFFFFF",
    "s3l2b": "#FFFFFF",
    "s3l3": "#006633",
    "s4l1": "#006633",
    "s4l2a": "#FFFFFF",
    "s4l2b": "#FFFFFF",
    "s4l3": "#006633",
    "s5l1": "#006633",
    "s5l2a": "#FFFFFF",
    "s5l2b": "#FFFFFF",
    "s5l3": "#006633",
    "s6l1": "#006633",
    "s6l2a": "#FFFFFF",
    "s6l2b": "#FFFFFF",
    "s6l3": "#006633",
    "s7l1": "#006633",
    "s7l2a": "#FFFFFF",
    "s7l2b": "#FFFFFF",
    "s7l3": "#006633",
    "s8l1": "#006633",
    "s8l2a": "#FFFFFF",
    "s8l2b": "#FFFFFF",
    "s8l3": "#006633",
    "s9l1": "#006633",
    "s9l2a": "#FFFFFF",
    "s9l2b": "#FFFFFF",
    "s9l3": "#006633",
    "stripe1": "#FFFFFF",
    "stripe10": "#FFFFFF",
    "stripe2": "#FFFFFF",
    "stripe3": "#FFFFFF",
    "stripe4": "#FFFFFF",
    "stripe5": "#FFFFFF",
    "stripe6": "#FFFFFF",
    "stripe7": "#FFFFFF",
    "stripe8": "#FFFFFF",
    "stripe9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "test",
    "version": "",
  },
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#006633",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 12,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Green",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 120,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Solid",
    },
    "beltRDF": {
      "about": "https://github.com/jeffholst/vue-custom-belt",
      "title": "Green",
    },
    "border": "#434244",
    "callback": null,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patch": "#000000",
    "patchBorder": "#434244",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 2000,
    "s10l1": "#006633",
    "s10l2a": "#006633",
    "s10l2b": "#006633",
    "s10l3": "#006633",
    "s11l1": "#006633",
    "s11l2a": "#006633",
    "s11l2b": "#006633",
    "s11l3": "#006633",
    "s12l1": "#006633",
    "s12l2a": "#006633",
    "s12l2b": "#006633",
    "s12l3": "#006633",
    "s13l1": "#006633",
    "s13l2a": "#006633",
    "s13l2b": "#006633",
    "s13l3": "#006633",
    "s1l1": "#006633",
    "s1l2a": "#006633",
    "s1l2b": "#006633",
    "s1l3": "#006633",
    "s2l1": "#006633",
    "s2l2a": "#006633",
    "s2l2b": "#006633",
    "s2l3": "#006633",
    "s3l1": "#006633",
    "s3l2a": "#006633",
    "s3l2b": "#006633",
    "s3l3": "#006633",
    "s4l1": "#006633",
    "s4l2a": "#006633",
    "s4l2b": "#006633",
    "s4l3": "#006633",
    "s5l1": "#006633",
    "s5l2a": "#006633",
    "s5l2b": "#006633",
    "s5l3": "#006633",
    "s6l1": "#006633",
    "s6l2a": "#006633",
    "s6l2b": "#006633",
    "s6l3": "#006633",
    "s7l1": "#006633",
    "s7l2a": "#006633",
    "s7l2b": "#006633",
    "s7l3": "#006633",
    "s8l1": "#006633",
    "s8l2a": "#006633",
    "s8l2b": "#006633",
    "s8l3": "#006633",
    "s9l1": "#006633",
    "s9l2a": "#006633",
    "s9l2b": "#006633",
    "s9l3": "#006633",
    "stripe1": "#FFFFFF",
    "stripe10": "#FFFFFF",
    "stripe2": "#FFFFFF",
    "stripe3": "#FFFFFF",
    "stripe4": "#FFFFFF",
    "stripe5": "#FFFFFF",
    "stripe6": "#FFFFFF",
    "stripe7": "#FFFFFF",
    "stripe8": "#FFFFFF",
    "stripe9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "test",
    "version": "",
  },
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#006633",
      "color2": "#000000",
      "color3": "#006633",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 13,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Green/Black",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 130,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Striped",
    },
    "beltRDF": {
      "about": "https://github.com/jeffholst/vue-custom-belt",
      "title": "Green/Black",
    },
    "border": "#434244",
    "callback": null,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patch": "#000000",
    "patchBorder": "#434244",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 2000,
    "s10l1": "#006633",
    "s10l2a": "#000000",
    "s10l2b": "#000000",
    "s10l3": "#006633",
    "s11l1": "#006633",
    "s11l2a": "#000000",
    "s11l2b": "#000000",
    "s11l3": "#006633",
    "s12l1": "#006633",
    "s12l2a": "#000000",
    "s12l2b": "#000000",
    "s12l3": "#006633",
    "s13l1": "#006633",
    "s13l2a": "#000000",
    "s13l2b": "#000000",
    "s13l3": "#006633",
    "s1l1": "#006633",
    "s1l2a": "#000000",
    "s1l2b": "#000000",
    "s1l3": "#006633",
    "s2l1": "#006633",
    "s2l2a": "#000000",
    "s2l2b": "#000000",
    "s2l3": "#006633",
    "s3l1": "#006633",
    "s3l2a": "#000000",
    "s3l2b": "#000000",
    "s3l3": "#006633",
    "s4l1": "#006633",
    "s4l2a": "#000000",
    "s4l2b": "#000000",
    "s4l3": "#006633",
    "s5l1": "#006633",
    "s5l2a": "#000000",
    "s5l2b": "#000000",
    "s5l3": "#006633",
    "s6l1": "#006633",
    "s6l2a": "#000000",
    "s6l2b": "#000000",
    "s6l3": "#006633",
    "s7l1": "#006633",
    "s7l2a": "#000000",
    "s7l2b": "#000000",
    "s7l3": "#006633",
    "s8l1": "#006633",
    "s8l2a": "#000000",
    "s8l2b": "#000000",
    "s8l3": "#006633",
    "s9l1": "#006633",
    "s9l2a": "#000000",
    "s9l2b": "#000000",
    "s9l3": "#006633",
    "stripe1": "#FFFFFF",
    "stripe10": "#FFFFFF",
    "stripe2": "#FFFFFF",
    "stripe3": "#FFFFFF",
    "stripe4": "#FFFFFF",
    "stripe5": "#FFFFFF",
    "stripe6": "#FFFFFF",
    "stripe7": "#FFFFFF",
    "stripe8": "#FFFFFF",
    "stripe9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "test",
    "version": "",
  },
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#0099CC",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 14,
      "maxStripes": 4,
      "minStripes": 0,
      "name": "Blue",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 140,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Solid",
    },
    "beltRDF": {
      "about": "https://github.com/jeffholst/vue-custom-belt",
      "title": "Blue",
    },
    "border": "#434244",
    "callback": null,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patch": "#000000",
    "patchBorder": "#434244",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 2000,
    "s10l1": "#0099CC",
    "s10l2a": "#0099CC",
    "s10l2b": "#0099CC",
    "s10l3": "#0099CC",
    "s11l1": "#0099CC",
    "s11l2a": "#0099CC",
    "s11l2b": "#0099CC",
    "s11l3": "#0099CC",
    "s12l1": "#0099CC",
    "s12l2a": "#0099CC",
    "s12l2b": "#0099CC",
    "s12l3": "#0099CC",
    "s13l1": "#0099CC",
    "s13l2a": "#0099CC",
    "s13l2b": "#0099CC",
    "s13l3": "#0099CC",
    "s1l1": "#0099CC",
    "s1l2a": "#0099CC",
    "s1l2b": "#0099CC",
    "s1l3": "#0099CC",
    "s2l1": "#0099CC",
    "s2l2a": "#0099CC",
    "s2l2b": "#0099CC",
    "s2l3": "#0099CC",
    "s3l1": "#0099CC",
    "s3l2a": "#0099CC",
    "s3l2b": "#0099CC",
    "s3l3": "#0099CC",
    "s4l1": "#0099CC",
    "s4l2a": "#0099CC",
    "s4l2b": "#0099CC",
    "s4l3": "#0099CC",
    "s5l1": "#0099CC",
    "s5l2a": "#0099CC",
    "s5l2b": "#0099CC",
    "s5l3": "#0099CC",
    "s6l1": "#0099CC",
    "s6l2a": "#0099CC",
    "s6l2b": "#0099CC",
    "s6l3": "#0099CC",
    "s7l1": "#0099CC",
    "s7l2a": "#0099CC",
    "s7l2b": "#0099CC",
    "s7l3": "#0099CC",
    "s8l1": "#0099CC",
    "s8l2a": "#0099CC",
    "s8l2b": "#0099CC",
    "s8l3": "#0099CC",
    "s9l1": "#0099CC",
    "s9l2a": "#0099CC",
    "s9l2b": "#0099CC",
    "s9l3": "#0099CC",
    "stripe1": "#FFFFFF",
    "stripe10": "#FFFFFF",
    "stripe2": "#FFFFFF",
    "stripe3": "#FFFFFF",
    "stripe4": "#FFFFFF",
    "stripe5": "#FFFFFF",
    "stripe6": "#FFFFFF",
    "stripe7": "#FFFFFF",
    "stripe8": "#FFFFFF",
    "stripe9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "test",
    "version": "",
  },
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#993399",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 15,
      "maxStripes": 4,
      "minStripes": 0,
      "name": "Purple",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 150,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Solid",
    },
    "beltRDF": {
      "about": "https://github.com/jeffholst/vue-custom-belt",
      "title": "Purple",
    },
    "border": "#434244",
    "callback": null,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patch": "#000000",
    "patchBorder": "#434244",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 2000,
    "s10l1": "#993399",
    "s10l2a": "#993399",
    "s10l2b": "#993399",
    "s10l3": "#993399",
    "s11l1": "#993399",
    "s11l2a": "#993399",
    "s11l2b": "#993399",
    "s11l3": "#993399",
    "s12l1": "#993399",
    "s12l2a": "#993399",
    "s12l2b": "#993399",
    "s12l3": "#993399",
    "s13l1": "#993399",
    "s13l2a": "#993399",
    "s13l2b": "#993399",
    "s13l3": "#993399",
    "s1l1": "#993399",
    "s1l2a": "#993399",
    "s1l2b": "#993399",
    "s1l3": "#993399",
    "s2l1": "#993399",
    "s2l2a": "#993399",
    "s2l2b": "#993399",
    "s2l3": "#993399",
    "s3l1": "#993399",
    "s3l2a": "#993399",
    "s3l2b": "#993399",
    "s3l3": "#993399",
    "s4l1": "#993399",
    "s4l2a": "#993399",
    "s4l2b": "#993399",
    "s4l3": "#993399",
    "s5l1": "#993399",
    "s5l2a": "#993399",
    "s5l2b": "#993399",
    "s5l3": "#993399",
    "s6l1": "#993399",
    "s6l2a": "#993399",
    "s6l2b": "#993399",
    "s6l3": "#993399",
    "s7l1": "#993399",
    "s7l2a": "#993399",
    "s7l2b": "#993399",
    "s7l3": "#993399",
    "s8l1": "#993399",
    "s8l2a": "#993399",
    "s8l2b": "#993399",
    "s8l3": "#993399",
    "s9l1": "#993399",
    "s9l2a": "#993399",
    "s9l2b": "#993399",
    "s9l3": "#993399",
    "stripe1": "#FFFFFF",
    "stripe10": "#FFFFFF",
    "stripe2": "#FFFFFF",
    "stripe3": "#FFFFFF",
    "stripe4": "#FFFFFF",
    "stripe5": "#FFFFFF",
    "stripe6": "#FFFFFF",
    "stripe7": "#FFFFFF",
    "stripe8": "#FFFFFF",
    "stripe9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "test",
    "version": "",
  },
  {
    "belt": {
      "borderColor": "#CCCCCC",
      "color1": "#663300",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 16,
      "maxStripes": 4,
      "minStripes": 0,
      "name": "Brown",
      "patchBorderColor": "#CCCCCC",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 160,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Solid",
    },
    "beltRDF": {
      "about": "https://github.com/jeffholst/vue-custom-belt",
      "title": "Brown",
    },
    "border": "#CCCCCC",
    "callback": null,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patch": "#000000",
    "patchBorder": "#CCCCCC",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 2000,
    "s10l1": "#663300",
    "s10l2a": "#663300",
    "s10l2b": "#663300",
    "s10l3": "#663300",
    "s11l1": "#663300",
    "s11l2a": "#663300",
    "s11l2b": "#663300",
    "s11l3": "#663300",
    "s12l1": "#663300",
    "s12l2a": "#663300",
    "s12l2b": "#663300",
    "s12l3": "#663300",
    "s13l1": "#663300",
    "s13l2a": "#663300",
    "s13l2b": "#663300",
    "s13l3": "#663300",
    "s1l1": "#663300",
    "s1l2a": "#663300",
    "s1l2b": "#663300",
    "s1l3": "#663300",
    "s2l1": "#663300",
    "s2l2a": "#663300",
    "s2l2b": "#663300",
    "s2l3": "#663300",
    "s3l1": "#663300",
    "s3l2a": "#663300",
    "s3l2b": "#663300",
    "s3l3": "#663300",
    "s4l1": "#663300",
    "s4l2a": "#663300",
    "s4l2b": "#663300",
    "s4l3": "#663300",
    "s5l1": "#663300",
    "s5l2a": "#663300",
    "s5l2b": "#663300",
    "s5l3": "#663300",
    "s6l1": "#663300",
    "s6l2a": "#663300",
    "s6l2b": "#663300",
    "s6l3": "#663300",
    "s7l1": "#663300",
    "s7l2a": "#663300",
    "s7l2b": "#663300",
    "s7l3": "#663300",
    "s8l1": "#663300",
    "s8l2a": "#663300",
    "s8l2b": "#663300",
    "s8l3": "#663300",
    "s9l1": "#663300",
    "s9l2a": "#663300",
    "s9l2b": "#663300",
    "s9l3": "#663300",
    "stripe1": "#FFFFFF",
    "stripe10": "#FFFFFF",
    "stripe2": "#FFFFFF",
    "stripe3": "#FFFFFF",
    "stripe4": "#FFFFFF",
    "stripe5": "#FFFFFF",
    "stripe6": "#FFFFFF",
    "stripe7": "#FFFFFF",
    "stripe8": "#FFFFFF",
    "stripe9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "test",
    "version": "",
  },
  {
    "belt": {
      "borderColor": "#CCCCCC",
      "color1": "#000000",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": true,
      "id": 17,
      "maxStripes": 6,
      "minStripes": 0,
      "name": "Black",
      "patchBorderColor": "#CCCCCC",
      "patchColor": "#990000",
      "professorBorderColor": "#CCCCCC",
      "professorPatchColor": "#FFFFFF",
      "sortOrder": 170,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Solid",
    },
    "beltRDF": {
      "about": "https://github.com/jeffholst/vue-custom-belt",
      "title": "Black",
    },
    "border": "#CCCCCC",
    "callback": null,
    "hasPatch": true,
    "hasProfessorPatch": true,
    "id": "",
    "patch": "#990000",
    "patchBorder": "#CCCCCC",
    "professorBorder": "#CCCCCC",
    "professorPatch": "#FFFFFF",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 2000,
    "s10l1": "#000000",
    "s10l2a": "#000000",
    "s10l2b": "#000000",
    "s10l3": "#000000",
    "s11l1": "#000000",
    "s11l2a": "#000000",
    "s11l2b": "#000000",
    "s11l3": "#000000",
    "s12l1": "#000000",
    "s12l2a": "#000000",
    "s12l2b": "#000000",
    "s12l3": "#000000",
    "s13l1": "#000000",
    "s13l2a": "#000000",
    "s13l2b": "#000000",
    "s13l3": "#000000",
    "s1l1": "#000000",
    "s1l2a": "#000000",
    "s1l2b": "#000000",
    "s1l3": "#000000",
    "s2l1": "#000000",
    "s2l2a": "#000000",
    "s2l2b": "#000000",
    "s2l3": "#000000",
    "s3l1": "#000000",
    "s3l2a": "#000000",
    "s3l2b": "#000000",
    "s3l3": "#000000",
    "s4l1": "#000000",
    "s4l2a": "#000000",
    "s4l2b": "#000000",
    "s4l3": "#000000",
    "s5l1": "#000000",
    "s5l2a": "#000000",
    "s5l2b": "#000000",
    "s5l3": "#000000",
    "s6l1": "#000000",
    "s6l2a": "#000000",
    "s6l2b": "#000000",
    "s6l3": "#000000",
    "s7l1": "#000000",
    "s7l2a": "#000000",
    "s7l2b": "#000000",
    "s7l3": "#000000",
    "s8l1": "#000000",
    "s8l2a": "#000000",
    "s8l2b": "#000000",
    "s8l3": "#000000",
    "s9l1": "#000000",
    "s9l2a": "#000000",
    "s9l2b": "#000000",
    "s9l3": "#000000",
    "stripe1": "#FFFFFF",
    "stripe10": "#FFFFFF",
    "stripe2": "#FFFFFF",
    "stripe3": "#FFFFFF",
    "stripe4": "#FFFFFF",
    "stripe5": "#FFFFFF",
    "stripe6": "#FFFFFF",
    "stripe7": "#FFFFFF",
    "stripe8": "#FFFFFF",
    "stripe9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "test",
    "version": "",
  },
  {
    "belt": {
      "borderColor": "#CCCCCC",
      "color1": "#990000",
      "color2": "#000000",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": true,
      "id": 18,
      "maxStripes": 7,
      "minStripes": 7,
      "name": "Red/Black",
      "patchBorderColor": "#CCCCCC",
      "patchColor": "#FFFFFF",
      "professorBorderColor": "#CCCCCC",
      "professorPatchColor": "#999999",
      "sortOrder": 180,
      "stripeColor": "#990000",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Coral",
    },
    "beltRDF": {
      "about": "https://github.com/jeffholst/vue-custom-belt",
      "title": "Red/Black",
    },
    "border": "#CCCCCC",
    "callback": null,
    "hasPatch": true,
    "hasProfessorPatch": true,
    "id": "",
    "patch": "#FFFFFF",
    "patchBorder": "#CCCCCC",
    "professorBorder": "#CCCCCC",
    "professorPatch": "#999999",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 2000,
    "s10l1": "#000000",
    "s10l2a": "#000000",
    "s10l2b": "#000000",
    "s10l3": "#000000",
    "s11l1": "#990000",
    "s11l2a": "#990000",
    "s11l2b": "#990000",
    "s11l3": "#990000",
    "s12l1": "#000000",
    "s12l2a": "#000000",
    "s12l2b": "#000000",
    "s12l3": "#000000",
    "s13l1": "#990000",
    "s13l2a": "#990000",
    "s13l2b": "#990000",
    "s13l3": "#990000",
    "s1l1": "#000000",
    "s1l2a": "#000000",
    "s1l2b": "#000000",
    "s1l3": "#000000",
    "s2l1": "#990000",
    "s2l2a": "#990000",
    "s2l2b": "#990000",
    "s2l3": "#990000",
    "s3l1": "#990000",
    "s3l2a": "#990000",
    "s3l2b": "#990000",
    "s3l3": "#990000",
    "s4l1": "#000000",
    "s4l2a": "#000000",
    "s4l2b": "#000000",
    "s4l3": "#000000",
    "s5l1": "#000000",
    "s5l2a": "#000000",
    "s5l2b": "#000000",
    "s5l3": "#000000",
    "s6l1": "#990000",
    "s6l2a": "#990000",
    "s6l2b": "#990000",
    "s6l3": "#990000",
    "s7l1": "#990000",
    "s7l2a": "#990000",
    "s7l2b": "#990000",
    "s7l3": "#990000",
    "s8l1": "#990000",
    "s8l2a": "#990000",
    "s8l2b": "#990000",
    "s8l3": "#990000",
    "s9l1": "#000000",
    "s9l2a": "#000000",
    "s9l2b": "#000000",
    "s9l3": "#000000",
    "stripe1": "#990000",
    "stripe10": "#990000",
    "stripe2": "#990000",
    "stripe3": "#990000",
    "stripe4": "#990000",
    "stripe5": "#990000",
    "stripe6": "#990000",
    "stripe7": "#990000",
    "stripe8": "#990000",
    "stripe9": "#990000",
    "stripeCount": 7,
    "stripePosition": "Right",
    "transitionCSS": "test",
    "version": "",
  },
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#FFFFFF",
      "color2": "#990000",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": true,
      "id": 19,
      "maxStripes": 8,
      "minStripes": 8,
      "name": "Red/White",
      "patchBorderColor": "#434244",
      "patchColor": "#FFFFFF",
      "professorBorderColor": "#434244",
      "professorPatchColor": "#999999",
      "sortOrder": 190,
      "stripeColor": "#990000",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Coral",
    },
    "beltRDF": {
      "about": "https://github.com/jeffholst/vue-custom-belt",
      "title": "Red/White",
    },
    "border": "#434244",
    "callback": null,
    "hasPatch": true,
    "hasProfessorPatch": true,
    "id": "",
    "patch": "#FFFFFF",
    "patchBorder": "#434244",
    "professorBorder": "#434244",
    "professorPatch": "#999999",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 2000,
    "s10l1": "#990000",
    "s10l2a": "#990000",
    "s10l2b": "#990000",
    "s10l3": "#990000",
    "s11l1": "#FFFFFF",
    "s11l2a": "#FFFFFF",
    "s11l2b": "#FFFFFF",
    "s11l3": "#FFFFFF",
    "s12l1": "#990000",
    "s12l2a": "#990000",
    "s12l2b": "#990000",
    "s12l3": "#990000",
    "s13l1": "#FFFFFF",
    "s13l2a": "#FFFFFF",
    "s13l2b": "#FFFFFF",
    "s13l3": "#FFFFFF",
    "s1l1": "#990000",
    "s1l2a": "#990000",
    "s1l2b": "#990000",
    "s1l3": "#990000",
    "s2l1": "#FFFFFF",
    "s2l2a": "#FFFFFF",
    "s2l2b": "#FFFFFF",
    "s2l3": "#FFFFFF",
    "s3l1": "#FFFFFF",
    "s3l2a": "#FFFFFF",
    "s3l2b": "#FFFFFF",
    "s3l3": "#FFFFFF",
    "s4l1": "#990000",
    "s4l2a": "#990000",
    "s4l2b": "#990000",
    "s4l3": "#990000",
    "s5l1": "#990000",
    "s5l2a": "#990000",
    "s5l2b": "#990000",
    "s5l3": "#990000",
    "s6l1": "#FFFFFF",
    "s6l2a": "#FFFFFF",
    "s6l2b": "#FFFFFF",
    "s6l3": "#FFFFFF",
    "s7l1": "#FFFFFF",
    "s7l2a": "#FFFFFF",
    "s7l2b": "#FFFFFF",
    "s7l3": "#FFFFFF",
    "s8l1": "#FFFFFF",
    "s8l2a": "#FFFFFF",
    "s8l2b": "#FFFFFF",
    "s8l3": "#FFFFFF",
    "s9l1": "#990000",
    "s9l2a": "#990000",
    "s9l2b": "#990000",
    "s9l3": "#990000",
    "stripe1": "#990000",
    "stripe10": "#990000",
    "stripe2": "#990000",
    "stripe3": "#990000",
    "stripe4": "#990000",
    "stripe5": "#990000",
    "stripe6": "#990000",
    "stripe7": "#990000",
    "stripe8": "#990000",
    "stripe9": "#990000",
    "stripeCount": 8,
    "stripePosition": "Right",
    "transitionCSS": "test",
    "version": "",
  },
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#990000",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": true,
      "id": 20,
      "maxStripes": 10,
      "minStripes": 9,
      "name": "Red",
      "patchBorderColor": "#434244",
      "patchColor": "#FFFFFF",
      "professorBorderColor": "#434244",
      "professorPatchColor": "#CC9900",
      "sortOrder": 200,
      "stripeColor": "#990000",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Solid",
    },
    "beltRDF": {
      "about": "https://github.com/jeffholst/vue-custom-belt",
      "title": "Red",
    },
    "border": "#434244",
    "callback": null,
    "hasPatch": true,
    "hasProfessorPatch": true,
    "id": "",
    "patch": "#FFFFFF",
    "patchBorder": "#434244",
    "professorBorder": "#434244",
    "professorPatch": "#CC9900",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 2000,
    "s10l1": "#990000",
    "s10l2a": "#990000",
    "s10l2b": "#990000",
    "s10l3": "#990000",
    "s11l1": "#990000",
    "s11l2a": "#990000",
    "s11l2b": "#990000",
    "s11l3": "#990000",
    "s12l1": "#990000",
    "s12l2a": "#990000",
    "s12l2b": "#990000",
    "s12l3": "#990000",
    "s13l1": "#990000",
    "s13l2a": "#990000",
    "s13l2b": "#990000",
    "s13l3": "#990000",
    "s1l1": "#990000",
    "s1l2a": "#990000",
    "s1l2b": "#990000",
    "s1l3": "#990000",
    "s2l1": "#990000",
    "s2l2a": "#990000",
    "s2l2b": "#990000",
    "s2l3": "#990000",
    "s3l1": "#990000",
    "s3l2a": "#990000",
    "s3l2b": "#990000",
    "s3l3": "#990000",
    "s4l1": "#990000",
    "s4l2a": "#990000",
    "s4l2b": "#990000",
    "s4l3": "#990000",
    "s5l1": "#990000",
    "s5l2a": "#990000",
    "s5l2b": "#990000",
    "s5l3": "#990000",
    "s6l1": "#990000",
    "s6l2a": "#990000",
    "s6l2b": "#990000",
    "s6l3": "#990000",
    "s7l1": "#990000",
    "s7l2a": "#990000",
    "s7l2b": "#990000",
    "s7l3": "#990000",
    "s8l1": "#990000",
    "s8l2a": "#990000",
    "s8l2b": "#990000",
    "s8l3": "#990000",
    "s9l1": "#990000",
    "s9l2a": "#990000",
    "s9l2b": "#990000",
    "s9l3": "#990000",
    "stripe1": "#990000",
    "stripe10": "#990000",
    "stripe2": "#990000",
    "stripe3": "#990000",
    "stripe4": "#990000",
    "stripe5": "#990000",
    "stripe6": "#990000",
    "stripe7": "#990000",
    "stripe8": "#990000",
    "stripe9": "#990000",
    "stripeCount": 9,
    "stripePosition": "Right",
    "transitionCSS": "test",
    "version": "",
  },
]
`;

exports[`BeltSystem > getBeltPropsById returns valid data 1`] = `
[
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#CC6633",
      "color2": "#000000",
      "color3": "#CC6633",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 10,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Orange/Black",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 100,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Striped",
    },
    "beltRDF": {
      "about": "https://github.com/jeffholst/vue-custom-belt",
      "title": "Orange/Black",
    },
    "border": "#434244",
    "callback": null,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patch": "#000000",
    "patchBorder": "#434244",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 0,
    "s10l1": "#CC6633",
    "s10l2a": "#000000",
    "s10l2b": "#000000",
    "s10l3": "#CC6633",
    "s11l1": "#CC6633",
    "s11l2a": "#000000",
    "s11l2b": "#000000",
    "s11l3": "#CC6633",
    "s12l1": "#CC6633",
    "s12l2a": "#000000",
    "s12l2b": "#000000",
    "s12l3": "#CC6633",
    "s13l1": "#CC6633",
    "s13l2a": "#000000",
    "s13l2b": "#000000",
    "s13l3": "#CC6633",
    "s1l1": "#CC6633",
    "s1l2a": "#000000",
    "s1l2b": "#000000",
    "s1l3": "#CC6633",
    "s2l1": "#CC6633",
    "s2l2a": "#000000",
    "s2l2b": "#000000",
    "s2l3": "#CC6633",
    "s3l1": "#CC6633",
    "s3l2a": "#000000",
    "s3l2b": "#000000",
    "s3l3": "#CC6633",
    "s4l1": "#CC6633",
    "s4l2a": "#000000",
    "s4l2b": "#000000",
    "s4l3": "#CC6633",
    "s5l1": "#CC6633",
    "s5l2a": "#000000",
    "s5l2b": "#000000",
    "s5l3": "#CC6633",
    "s6l1": "#CC6633",
    "s6l2a": "#000000",
    "s6l2b": "#000000",
    "s6l3": "#CC6633",
    "s7l1": "#CC6633",
    "s7l2a": "#000000",
    "s7l2b": "#000000",
    "s7l3": "#CC6633",
    "s8l1": "#CC6633",
    "s8l2a": "#000000",
    "s8l2b": "#000000",
    "s8l3": "#CC6633",
    "s9l1": "#CC6633",
    "s9l2a": "#000000",
    "s9l2b": "#000000",
    "s9l3": "#CC6633",
    "stripe1": "#FFFFFF",
    "stripe10": "#FFFFFF",
    "stripe2": "#FFFFFF",
    "stripe3": "#FFFFFF",
    "stripe4": "#FFFFFF",
    "stripe5": "#FFFFFF",
    "stripe6": "#FFFFFF",
    "stripe7": "#FFFFFF",
    "stripe8": "#FFFFFF",
    "stripe9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "",
    "version": "",
  },
]
`;

exports[`BeltSystem > getBeltPropsByIds returns valid data (no parms) 1`] = `
[
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#CC6633",
      "color2": "#000000",
      "color3": "#CC6633",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 10,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Orange/Black",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 100,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Striped",
    },
    "beltRDF": {
      "about": "https://github.com/jeffholst/vue-custom-belt",
      "title": "Orange/Black",
    },
    "border": "#434244",
    "callback": null,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patch": "#000000",
    "patchBorder": "#434244",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 0,
    "s10l1": "#CC6633",
    "s10l2a": "#000000",
    "s10l2b": "#000000",
    "s10l3": "#CC6633",
    "s11l1": "#CC6633",
    "s11l2a": "#000000",
    "s11l2b": "#000000",
    "s11l3": "#CC6633",
    "s12l1": "#CC6633",
    "s12l2a": "#000000",
    "s12l2b": "#000000",
    "s12l3": "#CC6633",
    "s13l1": "#CC6633",
    "s13l2a": "#000000",
    "s13l2b": "#000000",
    "s13l3": "#CC6633",
    "s1l1": "#CC6633",
    "s1l2a": "#000000",
    "s1l2b": "#000000",
    "s1l3": "#CC6633",
    "s2l1": "#CC6633",
    "s2l2a": "#000000",
    "s2l2b": "#000000",
    "s2l3": "#CC6633",
    "s3l1": "#CC6633",
    "s3l2a": "#000000",
    "s3l2b": "#000000",
    "s3l3": "#CC6633",
    "s4l1": "#CC6633",
    "s4l2a": "#000000",
    "s4l2b": "#000000",
    "s4l3": "#CC6633",
    "s5l1": "#CC6633",
    "s5l2a": "#000000",
    "s5l2b": "#000000",
    "s5l3": "#CC6633",
    "s6l1": "#CC6633",
    "s6l2a": "#000000",
    "s6l2b": "#000000",
    "s6l3": "#CC6633",
    "s7l1": "#CC6633",
    "s7l2a": "#000000",
    "s7l2b": "#000000",
    "s7l3": "#CC6633",
    "s8l1": "#CC6633",
    "s8l2a": "#000000",
    "s8l2b": "#000000",
    "s8l3": "#CC6633",
    "s9l1": "#CC6633",
    "s9l2a": "#000000",
    "s9l2b": "#000000",
    "s9l3": "#CC6633",
    "stripe1": "#FFFFFF",
    "stripe10": "#FFFFFF",
    "stripe2": "#FFFFFF",
    "stripe3": "#FFFFFF",
    "stripe4": "#FFFFFF",
    "stripe5": "#FFFFFF",
    "stripe6": "#FFFFFF",
    "stripe7": "#FFFFFF",
    "stripe8": "#FFFFFF",
    "stripe9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "",
    "version": "",
  },
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#990000",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": true,
      "id": 20,
      "maxStripes": 10,
      "minStripes": 9,
      "name": "Red",
      "patchBorderColor": "#434244",
      "patchColor": "#FFFFFF",
      "professorBorderColor": "#434244",
      "professorPatchColor": "#CC9900",
      "sortOrder": 200,
      "stripeColor": "#990000",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Solid",
    },
    "beltRDF": {
      "about": "https://github.com/jeffholst/vue-custom-belt",
      "title": "Red",
    },
    "border": "#434244",
    "callback": null,
    "hasPatch": true,
    "hasProfessorPatch": true,
    "id": "",
    "patch": "#FFFFFF",
    "patchBorder": "#434244",
    "professorBorder": "#434244",
    "professorPatch": "#CC9900",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 0,
    "s10l1": "#990000",
    "s10l2a": "#990000",
    "s10l2b": "#990000",
    "s10l3": "#990000",
    "s11l1": "#990000",
    "s11l2a": "#990000",
    "s11l2b": "#990000",
    "s11l3": "#990000",
    "s12l1": "#990000",
    "s12l2a": "#990000",
    "s12l2b": "#990000",
    "s12l3": "#990000",
    "s13l1": "#990000",
    "s13l2a": "#990000",
    "s13l2b": "#990000",
    "s13l3": "#990000",
    "s1l1": "#990000",
    "s1l2a": "#990000",
    "s1l2b": "#990000",
    "s1l3": "#990000",
    "s2l1": "#990000",
    "s2l2a": "#990000",
    "s2l2b": "#990000",
    "s2l3": "#990000",
    "s3l1": "#990000",
    "s3l2a": "#990000",
    "s3l2b": "#990000",
    "s3l3": "#990000",
    "s4l1": "#990000",
    "s4l2a": "#990000",
    "s4l2b": "#990000",
    "s4l3": "#990000",
    "s5l1": "#990000",
    "s5l2a": "#990000",
    "s5l2b": "#990000",
    "s5l3": "#990000",
    "s6l1": "#990000",
    "s6l2a": "#990000",
    "s6l2b": "#990000",
    "s6l3": "#990000",
    "s7l1": "#990000",
    "s7l2a": "#990000",
    "s7l2b": "#990000",
    "s7l3": "#990000",
    "s8l1": "#990000",
    "s8l2a": "#990000",
    "s8l2b": "#990000",
    "s8l3": "#990000",
    "s9l1": "#990000",
    "s9l2a": "#990000",
    "s9l2b": "#990000",
    "s9l3": "#990000",
    "stripe1": "#990000",
    "stripe10": "#990000",
    "stripe2": "#990000",
    "stripe3": "#990000",
    "stripe4": "#990000",
    "stripe5": "#990000",
    "stripe6": "#990000",
    "stripe7": "#990000",
    "stripe8": "#990000",
    "stripe9": "#990000",
    "stripeCount": 9,
    "stripePosition": "Right",
    "transitionCSS": "",
    "version": "",
  },
]
`;

exports[`BeltSystem > getBeltPropsByIds returns valid data (with extra info) 1`] = `
[
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#FFFFFF",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 1,
      "maxStripes": 4,
      "minStripes": 0,
      "name": "White",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 10,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Solid",
    },
    "beltRDF": {
      "about": "https://github.com/jeffholst/vue-custom-belt",
      "title": "White",
    },
    "border": "#434244",
    "callback": null,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patch": "#000000",
    "patchBorder": "#434244",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 1000,
    "s10l1": "#FFFFFF",
    "s10l2a": "#FFFFFF",
    "s10l2b": "#FFFFFF",
    "s10l3": "#FFFFFF",
    "s11l1": "#FFFFFF",
    "s11l2a": "#FFFFFF",
    "s11l2b": "#FFFFFF",
    "s11l3": "#FFFFFF",
    "s12l1": "#FFFFFF",
    "s12l2a": "#FFFFFF",
    "s12l2b": "#FFFFFF",
    "s12l3": "#FFFFFF",
    "s13l1": "#FFFFFF",
    "s13l2a": "#FFFFFF",
    "s13l2b": "#FFFFFF",
    "s13l3": "#FFFFFF",
    "s1l1": "#FFFFFF",
    "s1l2a": "#FFFFFF",
    "s1l2b": "#FFFFFF",
    "s1l3": "#FFFFFF",
    "s2l1": "#FFFFFF",
    "s2l2a": "#FFFFFF",
    "s2l2b": "#FFFFFF",
    "s2l3": "#FFFFFF",
    "s3l1": "#FFFFFF",
    "s3l2a": "#FFFFFF",
    "s3l2b": "#FFFFFF",
    "s3l3": "#FFFFFF",
    "s4l1": "#FFFFFF",
    "s4l2a": "#FFFFFF",
    "s4l2b": "#FFFFFF",
    "s4l3": "#FFFFFF",
    "s5l1": "#FFFFFF",
    "s5l2a": "#FFFFFF",
    "s5l2b": "#FFFFFF",
    "s5l3": "#FFFFFF",
    "s6l1": "#FFFFFF",
    "s6l2a": "#FFFFFF",
    "s6l2b": "#FFFFFF",
    "s6l3": "#FFFFFF",
    "s7l1": "#FFFFFF",
    "s7l2a": "#FFFFFF",
    "s7l2b": "#FFFFFF",
    "s7l3": "#FFFFFF",
    "s8l1": "#FFFFFF",
    "s8l2a": "#FFFFFF",
    "s8l2b": "#FFFFFF",
    "s8l3": "#FFFFFF",
    "s9l1": "#FFFFFF",
    "s9l2a": "#FFFFFF",
    "s9l2b": "#FFFFFF",
    "s9l3": "#FFFFFF",
    "stripe1": "#FFFFFF",
    "stripe10": "#FFFFFF",
    "stripe2": "#FFFFFF",
    "stripe3": "#FFFFFF",
    "stripe4": "#FFFFFF",
    "stripe5": "#FFFFFF",
    "stripe6": "#FFFFFF",
    "stripe7": "#FFFFFF",
    "stripe8": "#FFFFFF",
    "stripe9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "test",
    "version": "",
  },
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#999999",
      "color2": "#FFFFFF",
      "color3": "#999999",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 2,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Gray/White",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 20,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Striped",
    },
    "beltRDF": {
      "about": "https://github.com/jeffholst/vue-custom-belt",
      "title": "Gray/White",
    },
    "border": "#434244",
    "callback": null,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patch": "#000000",
    "patchBorder": "#434244",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 1000,
    "s10l1": "#999999",
    "s10l2a": "#FFFFFF",
    "s10l2b": "#FFFFFF",
    "s10l3": "#999999",
    "s11l1": "#999999",
    "s11l2a": "#FFFFFF",
    "s11l2b": "#FFFFFF",
    "s11l3": "#999999",
    "s12l1": "#999999",
    "s12l2a": "#FFFFFF",
    "s12l2b": "#FFFFFF",
    "s12l3": "#999999",
    "s13l1": "#999999",
    "s13l2a": "#FFFFFF",
    "s13l2b": "#FFFFFF",
    "s13l3": "#999999",
    "s1l1": "#999999",
    "s1l2a": "#FFFFFF",
    "s1l2b": "#FFFFFF",
    "s1l3": "#999999",
    "s2l1": "#999999",
    "s2l2a": "#FFFFFF",
    "s2l2b": "#FFFFFF",
    "s2l3": "#999999",
    "s3l1": "#999999",
    "s3l2a": "#FFFFFF",
    "s3l2b": "#FFFFFF",
    "s3l3": "#999999",
    "s4l1": "#999999",
    "s4l2a": "#FFFFFF",
    "s4l2b": "#FFFFFF",
    "s4l3": "#999999",
    "s5l1": "#999999",
    "s5l2a": "#FFFFFF",
    "s5l2b": "#FFFFFF",
    "s5l3": "#999999",
    "s6l1": "#999999",
    "s6l2a": "#FFFFFF",
    "s6l2b": "#FFFFFF",
    "s6l3": "#999999",
    "s7l1": "#999999",
    "s7l2a": "#FFFFFF",
    "s7l2b": "#FFFFFF",
    "s7l3": "#999999",
    "s8l1": "#999999",
    "s8l2a": "#FFFFFF",
    "s8l2b": "#FFFFFF",
    "s8l3": "#999999",
    "s9l1": "#999999",
    "s9l2a": "#FFFFFF",
    "s9l2b": "#FFFFFF",
    "s9l3": "#999999",
    "stripe1": "#FFFFFF",
    "stripe10": "#FFFFFF",
    "stripe2": "#FFFFFF",
    "stripe3": "#FFFFFF",
    "stripe4": "#FFFFFF",
    "stripe5": "#FFFFFF",
    "stripe6": "#FFFFFF",
    "stripe7": "#FFFFFF",
    "stripe8": "#FFFFFF",
    "stripe9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "test",
    "version": "",
  },
]
`;

exports[`BeltSystem > getBeltPropsByIds returns valid data (with stripe info) 1`] = `
[
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#CC6633",
      "color2": "#000000",
      "color3": "#CC6633",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 10,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Orange/Black",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 100,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Striped",
    },
    "beltRDF": {
      "about": "https://github.com/jeffholst/vue-custom-belt",
      "title": "Orange/Black",
    },
    "border": "#434244",
    "callback": null,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patch": "#000000",
    "patchBorder": "#434244",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 0,
    "s10l1": "#CC6633",
    "s10l2a": "#000000",
    "s10l2b": "#000000",
    "s10l3": "#CC6633",
    "s11l1": "#CC6633",
    "s11l2a": "#000000",
    "s11l2b": "#000000",
    "s11l3": "#CC6633",
    "s12l1": "#CC6633",
    "s12l2a": "#000000",
    "s12l2b": "#000000",
    "s12l3": "#CC6633",
    "s13l1": "#CC6633",
    "s13l2a": "#000000",
    "s13l2b": "#000000",
    "s13l3": "#CC6633",
    "s1l1": "#CC6633",
    "s1l2a": "#000000",
    "s1l2b": "#000000",
    "s1l3": "#CC6633",
    "s2l1": "#CC6633",
    "s2l2a": "#000000",
    "s2l2b": "#000000",
    "s2l3": "#CC6633",
    "s3l1": "#CC6633",
    "s3l2a": "#000000",
    "s3l2b": "#000000",
    "s3l3": "#CC6633",
    "s4l1": "#CC6633",
    "s4l2a": "#000000",
    "s4l2b": "#000000",
    "s4l3": "#CC6633",
    "s5l1": "#CC6633",
    "s5l2a": "#000000",
    "s5l2b": "#000000",
    "s5l3": "#CC6633",
    "s6l1": "#CC6633",
    "s6l2a": "#000000",
    "s6l2b": "#000000",
    "s6l3": "#CC6633",
    "s7l1": "#CC6633",
    "s7l2a": "#000000",
    "s7l2b": "#000000",
    "s7l3": "#CC6633",
    "s8l1": "#CC6633",
    "s8l2a": "#000000",
    "s8l2b": "#000000",
    "s8l3": "#CC6633",
    "s9l1": "#CC6633",
    "s9l2a": "#000000",
    "s9l2b": "#000000",
    "s9l3": "#CC6633",
    "stripe1": "#FFFFFF",
    "stripe10": "#FFFFFF",
    "stripe2": "#FFFFFF",
    "stripe3": "#FFFFFF",
    "stripe4": "#FFFFFF",
    "stripe5": "#FFFFFF",
    "stripe6": "#FFFFFF",
    "stripe7": "#FFFFFF",
    "stripe8": "#FFFFFF",
    "stripe9": "#FFFFFF",
    "stripeCount": 1,
    "stripePosition": "Left",
    "transitionCSS": "",
    "version": "",
  },
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#990000",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": true,
      "id": 20,
      "maxStripes": 10,
      "minStripes": 9,
      "name": "Red",
      "patchBorderColor": "#434244",
      "patchColor": "#FFFFFF",
      "professorBorderColor": "#434244",
      "professorPatchColor": "#CC9900",
      "sortOrder": 200,
      "stripeColor": "#990000",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Solid",
    },
    "beltRDF": {
      "about": "https://github.com/jeffholst/vue-custom-belt",
      "title": "Red",
    },
    "border": "#434244",
    "callback": null,
    "hasPatch": true,
    "hasProfessorPatch": true,
    "id": "",
    "patch": "#FFFFFF",
    "patchBorder": "#434244",
    "professorBorder": "#434244",
    "professorPatch": "#CC9900",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 0,
    "s10l1": "#990000",
    "s10l2a": "#990000",
    "s10l2b": "#990000",
    "s10l3": "#990000",
    "s11l1": "#990000",
    "s11l2a": "#990000",
    "s11l2b": "#990000",
    "s11l3": "#990000",
    "s12l1": "#990000",
    "s12l2a": "#990000",
    "s12l2b": "#990000",
    "s12l3": "#990000",
    "s13l1": "#990000",
    "s13l2a": "#990000",
    "s13l2b": "#990000",
    "s13l3": "#990000",
    "s1l1": "#990000",
    "s1l2a": "#990000",
    "s1l2b": "#990000",
    "s1l3": "#990000",
    "s2l1": "#990000",
    "s2l2a": "#990000",
    "s2l2b": "#990000",
    "s2l3": "#990000",
    "s3l1": "#990000",
    "s3l2a": "#990000",
    "s3l2b": "#990000",
    "s3l3": "#990000",
    "s4l1": "#990000",
    "s4l2a": "#990000",
    "s4l2b": "#990000",
    "s4l3": "#990000",
    "s5l1": "#990000",
    "s5l2a": "#990000",
    "s5l2b": "#990000",
    "s5l3": "#990000",
    "s6l1": "#990000",
    "s6l2a": "#990000",
    "s6l2b": "#990000",
    "s6l3": "#990000",
    "s7l1": "#990000",
    "s7l2a": "#990000",
    "s7l2b": "#990000",
    "s7l3": "#990000",
    "s8l1": "#990000",
    "s8l2a": "#990000",
    "s8l2b": "#990000",
    "s8l3": "#990000",
    "s9l1": "#990000",
    "s9l2a": "#990000",
    "s9l2b": "#990000",
    "s9l3": "#990000",
    "stripe1": "#990000",
    "stripe10": "#990000",
    "stripe2": "#990000",
    "stripe3": "#990000",
    "stripe4": "#990000",
    "stripe5": "#990000",
    "stripe6": "#990000",
    "stripe7": "#990000",
    "stripe8": "#990000",
    "stripe9": "#990000",
    "stripeCount": 1,
    "stripePosition": "Left",
    "transitionCSS": "",
    "version": "",
  },
]
`;

exports[`BeltSystem > getBeltPropsByName returns valid data 1`] = `
[
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#0099CC",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 14,
      "maxStripes": 4,
      "minStripes": 0,
      "name": "Blue",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 140,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Solid",
    },
    "beltRDF": {
      "about": "https://github.com/jeffholst/vue-custom-belt",
      "title": "Blue",
    },
    "border": "#434244",
    "callback": null,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patch": "#000000",
    "patchBorder": "#434244",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 0,
    "s10l1": "#0099CC",
    "s10l2a": "#0099CC",
    "s10l2b": "#0099CC",
    "s10l3": "#0099CC",
    "s11l1": "#0099CC",
    "s11l2a": "#0099CC",
    "s11l2b": "#0099CC",
    "s11l3": "#0099CC",
    "s12l1": "#0099CC",
    "s12l2a": "#0099CC",
    "s12l2b": "#0099CC",
    "s12l3": "#0099CC",
    "s13l1": "#0099CC",
    "s13l2a": "#0099CC",
    "s13l2b": "#0099CC",
    "s13l3": "#0099CC",
    "s1l1": "#0099CC",
    "s1l2a": "#0099CC",
    "s1l2b": "#0099CC",
    "s1l3": "#0099CC",
    "s2l1": "#0099CC",
    "s2l2a": "#0099CC",
    "s2l2b": "#0099CC",
    "s2l3": "#0099CC",
    "s3l1": "#0099CC",
    "s3l2a": "#0099CC",
    "s3l2b": "#0099CC",
    "s3l3": "#0099CC",
    "s4l1": "#0099CC",
    "s4l2a": "#0099CC",
    "s4l2b": "#0099CC",
    "s4l3": "#0099CC",
    "s5l1": "#0099CC",
    "s5l2a": "#0099CC",
    "s5l2b": "#0099CC",
    "s5l3": "#0099CC",
    "s6l1": "#0099CC",
    "s6l2a": "#0099CC",
    "s6l2b": "#0099CC",
    "s6l3": "#0099CC",
    "s7l1": "#0099CC",
    "s7l2a": "#0099CC",
    "s7l2b": "#0099CC",
    "s7l3": "#0099CC",
    "s8l1": "#0099CC",
    "s8l2a": "#0099CC",
    "s8l2b": "#0099CC",
    "s8l3": "#0099CC",
    "s9l1": "#0099CC",
    "s9l2a": "#0099CC",
    "s9l2b": "#0099CC",
    "s9l3": "#0099CC",
    "stripe1": "#FFFFFF",
    "stripe10": "#FFFFFF",
    "stripe2": "#FFFFFF",
    "stripe3": "#FFFFFF",
    "stripe4": "#FFFFFF",
    "stripe5": "#FFFFFF",
    "stripe6": "#FFFFFF",
    "stripe7": "#FFFFFF",
    "stripe8": "#FFFFFF",
    "stripe9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "",
    "version": "",
  },
]
`;

exports[`BeltSystem > getBeltPropsByNames returns valid data (no parms) 1`] = `
[
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#0099CC",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 14,
      "maxStripes": 4,
      "minStripes": 0,
      "name": "Blue",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 140,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Solid",
    },
    "beltRDF": {
      "about": "https://github.com/jeffholst/vue-custom-belt",
      "title": "Blue",
    },
    "border": "#434244",
    "callback": null,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patch": "#000000",
    "patchBorder": "#434244",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 0,
    "s10l1": "#0099CC",
    "s10l2a": "#0099CC",
    "s10l2b": "#0099CC",
    "s10l3": "#0099CC",
    "s11l1": "#0099CC",
    "s11l2a": "#0099CC",
    "s11l2b": "#0099CC",
    "s11l3": "#0099CC",
    "s12l1": "#0099CC",
    "s12l2a": "#0099CC",
    "s12l2b": "#0099CC",
    "s12l3": "#0099CC",
    "s13l1": "#0099CC",
    "s13l2a": "#0099CC",
    "s13l2b": "#0099CC",
    "s13l3": "#0099CC",
    "s1l1": "#0099CC",
    "s1l2a": "#0099CC",
    "s1l2b": "#0099CC",
    "s1l3": "#0099CC",
    "s2l1": "#0099CC",
    "s2l2a": "#0099CC",
    "s2l2b": "#0099CC",
    "s2l3": "#0099CC",
    "s3l1": "#0099CC",
    "s3l2a": "#0099CC",
    "s3l2b": "#0099CC",
    "s3l3": "#0099CC",
    "s4l1": "#0099CC",
    "s4l2a": "#0099CC",
    "s4l2b": "#0099CC",
    "s4l3": "#0099CC",
    "s5l1": "#0099CC",
    "s5l2a": "#0099CC",
    "s5l2b": "#0099CC",
    "s5l3": "#0099CC",
    "s6l1": "#0099CC",
    "s6l2a": "#0099CC",
    "s6l2b": "#0099CC",
    "s6l3": "#0099CC",
    "s7l1": "#0099CC",
    "s7l2a": "#0099CC",
    "s7l2b": "#0099CC",
    "s7l3": "#0099CC",
    "s8l1": "#0099CC",
    "s8l2a": "#0099CC",
    "s8l2b": "#0099CC",
    "s8l3": "#0099CC",
    "s9l1": "#0099CC",
    "s9l2a": "#0099CC",
    "s9l2b": "#0099CC",
    "s9l3": "#0099CC",
    "stripe1": "#FFFFFF",
    "stripe10": "#FFFFFF",
    "stripe2": "#FFFFFF",
    "stripe3": "#FFFFFF",
    "stripe4": "#FFFFFF",
    "stripe5": "#FFFFFF",
    "stripe6": "#FFFFFF",
    "stripe7": "#FFFFFF",
    "stripe8": "#FFFFFF",
    "stripe9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "",
    "version": "",
  },
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#993399",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 15,
      "maxStripes": 4,
      "minStripes": 0,
      "name": "Purple",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 150,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Solid",
    },
    "beltRDF": {
      "about": "https://github.com/jeffholst/vue-custom-belt",
      "title": "Purple",
    },
    "border": "#434244",
    "callback": null,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patch": "#000000",
    "patchBorder": "#434244",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 0,
    "s10l1": "#993399",
    "s10l2a": "#993399",
    "s10l2b": "#993399",
    "s10l3": "#993399",
    "s11l1": "#993399",
    "s11l2a": "#993399",
    "s11l2b": "#993399",
    "s11l3": "#993399",
    "s12l1": "#993399",
    "s12l2a": "#993399",
    "s12l2b": "#993399",
    "s12l3": "#993399",
    "s13l1": "#993399",
    "s13l2a": "#993399",
    "s13l2b": "#993399",
    "s13l3": "#993399",
    "s1l1": "#993399",
    "s1l2a": "#993399",
    "s1l2b": "#993399",
    "s1l3": "#993399",
    "s2l1": "#993399",
    "s2l2a": "#993399",
    "s2l2b": "#993399",
    "s2l3": "#993399",
    "s3l1": "#993399",
    "s3l2a": "#993399",
    "s3l2b": "#993399",
    "s3l3": "#993399",
    "s4l1": "#993399",
    "s4l2a": "#993399",
    "s4l2b": "#993399",
    "s4l3": "#993399",
    "s5l1": "#993399",
    "s5l2a": "#993399",
    "s5l2b": "#993399",
    "s5l3": "#993399",
    "s6l1": "#993399",
    "s6l2a": "#993399",
    "s6l2b": "#993399",
    "s6l3": "#993399",
    "s7l1": "#993399",
    "s7l2a": "#993399",
    "s7l2b": "#993399",
    "s7l3": "#993399",
    "s8l1": "#993399",
    "s8l2a": "#993399",
    "s8l2b": "#993399",
    "s8l3": "#993399",
    "s9l1": "#993399",
    "s9l2a": "#993399",
    "s9l2b": "#993399",
    "s9l3": "#993399",
    "stripe1": "#FFFFFF",
    "stripe10": "#FFFFFF",
    "stripe2": "#FFFFFF",
    "stripe3": "#FFFFFF",
    "stripe4": "#FFFFFF",
    "stripe5": "#FFFFFF",
    "stripe6": "#FFFFFF",
    "stripe7": "#FFFFFF",
    "stripe8": "#FFFFFF",
    "stripe9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "",
    "version": "",
  },
]
`;

exports[`BeltSystem > getBeltPropsByNames returns valid data (with extra info) 1`] = `
[
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#FFFFFF",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 1,
      "maxStripes": 4,
      "minStripes": 0,
      "name": "White",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 10,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Solid",
    },
    "beltRDF": {
      "about": "https://github.com/jeffholst/vue-custom-belt",
      "title": "White",
    },
    "border": "#434244",
    "callback": null,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patch": "#000000",
    "patchBorder": "#434244",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 1000,
    "s10l1": "#FFFFFF",
    "s10l2a": "#FFFFFF",
    "s10l2b": "#FFFFFF",
    "s10l3": "#FFFFFF",
    "s11l1": "#FFFFFF",
    "s11l2a": "#FFFFFF",
    "s11l2b": "#FFFFFF",
    "s11l3": "#FFFFFF",
    "s12l1": "#FFFFFF",
    "s12l2a": "#FFFFFF",
    "s12l2b": "#FFFFFF",
    "s12l3": "#FFFFFF",
    "s13l1": "#FFFFFF",
    "s13l2a": "#FFFFFF",
    "s13l2b": "#FFFFFF",
    "s13l3": "#FFFFFF",
    "s1l1": "#FFFFFF",
    "s1l2a": "#FFFFFF",
    "s1l2b": "#FFFFFF",
    "s1l3": "#FFFFFF",
    "s2l1": "#FFFFFF",
    "s2l2a": "#FFFFFF",
    "s2l2b": "#FFFFFF",
    "s2l3": "#FFFFFF",
    "s3l1": "#FFFFFF",
    "s3l2a": "#FFFFFF",
    "s3l2b": "#FFFFFF",
    "s3l3": "#FFFFFF",
    "s4l1": "#FFFFFF",
    "s4l2a": "#FFFFFF",
    "s4l2b": "#FFFFFF",
    "s4l3": "#FFFFFF",
    "s5l1": "#FFFFFF",
    "s5l2a": "#FFFFFF",
    "s5l2b": "#FFFFFF",
    "s5l3": "#FFFFFF",
    "s6l1": "#FFFFFF",
    "s6l2a": "#FFFFFF",
    "s6l2b": "#FFFFFF",
    "s6l3": "#FFFFFF",
    "s7l1": "#FFFFFF",
    "s7l2a": "#FFFFFF",
    "s7l2b": "#FFFFFF",
    "s7l3": "#FFFFFF",
    "s8l1": "#FFFFFF",
    "s8l2a": "#FFFFFF",
    "s8l2b": "#FFFFFF",
    "s8l3": "#FFFFFF",
    "s9l1": "#FFFFFF",
    "s9l2a": "#FFFFFF",
    "s9l2b": "#FFFFFF",
    "s9l3": "#FFFFFF",
    "stripe1": "#FFFFFF",
    "stripe10": "#FFFFFF",
    "stripe2": "#FFFFFF",
    "stripe3": "#FFFFFF",
    "stripe4": "#FFFFFF",
    "stripe5": "#FFFFFF",
    "stripe6": "#FFFFFF",
    "stripe7": "#FFFFFF",
    "stripe8": "#FFFFFF",
    "stripe9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "test",
    "version": "",
  },
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#993399",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 15,
      "maxStripes": 4,
      "minStripes": 0,
      "name": "Purple",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 150,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Solid",
    },
    "beltRDF": {
      "about": "https://github.com/jeffholst/vue-custom-belt",
      "title": "Purple",
    },
    "border": "#434244",
    "callback": null,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patch": "#000000",
    "patchBorder": "#434244",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 1000,
    "s10l1": "#993399",
    "s10l2a": "#993399",
    "s10l2b": "#993399",
    "s10l3": "#993399",
    "s11l1": "#993399",
    "s11l2a": "#993399",
    "s11l2b": "#993399",
    "s11l3": "#993399",
    "s12l1": "#993399",
    "s12l2a": "#993399",
    "s12l2b": "#993399",
    "s12l3": "#993399",
    "s13l1": "#993399",
    "s13l2a": "#993399",
    "s13l2b": "#993399",
    "s13l3": "#993399",
    "s1l1": "#993399",
    "s1l2a": "#993399",
    "s1l2b": "#993399",
    "s1l3": "#993399",
    "s2l1": "#993399",
    "s2l2a": "#993399",
    "s2l2b": "#993399",
    "s2l3": "#993399",
    "s3l1": "#993399",
    "s3l2a": "#993399",
    "s3l2b": "#993399",
    "s3l3": "#993399",
    "s4l1": "#993399",
    "s4l2a": "#993399",
    "s4l2b": "#993399",
    "s4l3": "#993399",
    "s5l1": "#993399",
    "s5l2a": "#993399",
    "s5l2b": "#993399",
    "s5l3": "#993399",
    "s6l1": "#993399",
    "s6l2a": "#993399",
    "s6l2b": "#993399",
    "s6l3": "#993399",
    "s7l1": "#993399",
    "s7l2a": "#993399",
    "s7l2b": "#993399",
    "s7l3": "#993399",
    "s8l1": "#993399",
    "s8l2a": "#993399",
    "s8l2b": "#993399",
    "s8l3": "#993399",
    "s9l1": "#993399",
    "s9l2a": "#993399",
    "s9l2b": "#993399",
    "s9l3": "#993399",
    "stripe1": "#FFFFFF",
    "stripe10": "#FFFFFF",
    "stripe2": "#FFFFFF",
    "stripe3": "#FFFFFF",
    "stripe4": "#FFFFFF",
    "stripe5": "#FFFFFF",
    "stripe6": "#FFFFFF",
    "stripe7": "#FFFFFF",
    "stripe8": "#FFFFFF",
    "stripe9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "test",
    "version": "",
  },
]
`;

exports[`BeltSystem > getBeltPropsByNames returns valid data (with stripe info) 1`] = `
[
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#FFFFFF",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 1,
      "maxStripes": 4,
      "minStripes": 0,
      "name": "White",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 10,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Solid",
    },
    "beltRDF": {
      "about": "https://github.com/jeffholst/vue-custom-belt",
      "title": "White",
    },
    "border": "#434244",
    "callback": null,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patch": "#000000",
    "patchBorder": "#434244",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 0,
    "s10l1": "#FFFFFF",
    "s10l2a": "#FFFFFF",
    "s10l2b": "#FFFFFF",
    "s10l3": "#FFFFFF",
    "s11l1": "#FFFFFF",
    "s11l2a": "#FFFFFF",
    "s11l2b": "#FFFFFF",
    "s11l3": "#FFFFFF",
    "s12l1": "#FFFFFF",
    "s12l2a": "#FFFFFF",
    "s12l2b": "#FFFFFF",
    "s12l3": "#FFFFFF",
    "s13l1": "#FFFFFF",
    "s13l2a": "#FFFFFF",
    "s13l2b": "#FFFFFF",
    "s13l3": "#FFFFFF",
    "s1l1": "#FFFFFF",
    "s1l2a": "#FFFFFF",
    "s1l2b": "#FFFFFF",
    "s1l3": "#FFFFFF",
    "s2l1": "#FFFFFF",
    "s2l2a": "#FFFFFF",
    "s2l2b": "#FFFFFF",
    "s2l3": "#FFFFFF",
    "s3l1": "#FFFFFF",
    "s3l2a": "#FFFFFF",
    "s3l2b": "#FFFFFF",
    "s3l3": "#FFFFFF",
    "s4l1": "#FFFFFF",
    "s4l2a": "#FFFFFF",
    "s4l2b": "#FFFFFF",
    "s4l3": "#FFFFFF",
    "s5l1": "#FFFFFF",
    "s5l2a": "#FFFFFF",
    "s5l2b": "#FFFFFF",
    "s5l3": "#FFFFFF",
    "s6l1": "#FFFFFF",
    "s6l2a": "#FFFFFF",
    "s6l2b": "#FFFFFF",
    "s6l3": "#FFFFFF",
    "s7l1": "#FFFFFF",
    "s7l2a": "#FFFFFF",
    "s7l2b": "#FFFFFF",
    "s7l3": "#FFFFFF",
    "s8l1": "#FFFFFF",
    "s8l2a": "#FFFFFF",
    "s8l2b": "#FFFFFF",
    "s8l3": "#FFFFFF",
    "s9l1": "#FFFFFF",
    "s9l2a": "#FFFFFF",
    "s9l2b": "#FFFFFF",
    "s9l3": "#FFFFFF",
    "stripe1": "#FFFFFF",
    "stripe10": "#FFFFFF",
    "stripe2": "#FFFFFF",
    "stripe3": "#FFFFFF",
    "stripe4": "#FFFFFF",
    "stripe5": "#FFFFFF",
    "stripe6": "#FFFFFF",
    "stripe7": "#FFFFFF",
    "stripe8": "#FFFFFF",
    "stripe9": "#FFFFFF",
    "stripeCount": 1,
    "stripePosition": "Left",
    "transitionCSS": "",
    "version": "",
  },
  {
    "belt": {
      "borderColor": "#CCCCCC",
      "color1": "#663300",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 16,
      "maxStripes": 4,
      "minStripes": 0,
      "name": "Brown",
      "patchBorderColor": "#CCCCCC",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 160,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Solid",
    },
    "beltRDF": {
      "about": "https://github.com/jeffholst/vue-custom-belt",
      "title": "Brown",
    },
    "border": "#CCCCCC",
    "callback": null,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patch": "#000000",
    "patchBorder": "#CCCCCC",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 0,
    "s10l1": "#663300",
    "s10l2a": "#663300",
    "s10l2b": "#663300",
    "s10l3": "#663300",
    "s11l1": "#663300",
    "s11l2a": "#663300",
    "s11l2b": "#663300",
    "s11l3": "#663300",
    "s12l1": "#663300",
    "s12l2a": "#663300",
    "s12l2b": "#663300",
    "s12l3": "#663300",
    "s13l1": "#663300",
    "s13l2a": "#663300",
    "s13l2b": "#663300",
    "s13l3": "#663300",
    "s1l1": "#663300",
    "s1l2a": "#663300",
    "s1l2b": "#663300",
    "s1l3": "#663300",
    "s2l1": "#663300",
    "s2l2a": "#663300",
    "s2l2b": "#663300",
    "s2l3": "#663300",
    "s3l1": "#663300",
    "s3l2a": "#663300",
    "s3l2b": "#663300",
    "s3l3": "#663300",
    "s4l1": "#663300",
    "s4l2a": "#663300",
    "s4l2b": "#663300",
    "s4l3": "#663300",
    "s5l1": "#663300",
    "s5l2a": "#663300",
    "s5l2b": "#663300",
    "s5l3": "#663300",
    "s6l1": "#663300",
    "s6l2a": "#663300",
    "s6l2b": "#663300",
    "s6l3": "#663300",
    "s7l1": "#663300",
    "s7l2a": "#663300",
    "s7l2b": "#663300",
    "s7l3": "#663300",
    "s8l1": "#663300",
    "s8l2a": "#663300",
    "s8l2b": "#663300",
    "s8l3": "#663300",
    "s9l1": "#663300",
    "s9l2a": "#663300",
    "s9l2b": "#663300",
    "s9l3": "#663300",
    "stripe1": "#FFFFFF",
    "stripe10": "#FFFFFF",
    "stripe2": "#FFFFFF",
    "stripe3": "#FFFFFF",
    "stripe4": "#FFFFFF",
    "stripe5": "#FFFFFF",
    "stripe6": "#FFFFFF",
    "stripe7": "#FFFFFF",
    "stripe8": "#FFFFFF",
    "stripe9": "#FFFFFF",
    "stripeCount": 1,
    "stripePosition": "Left",
    "transitionCSS": "",
    "version": "",
  },
]
`;
